修改了第三章 类基础一节，这一节可以读通了
重新理解了 getter 和 setter

--- a/docs/第3章. Classes,Symbols,Objects 和 Decorators.md
+++ b/docs/第3章. Classes,Symbols,Objects 和 Decorators.md
@@ -1,20 +1,18 @@
-# Classs,Symbols,Objects 和 Decorators
+# Classs,Symbols,Objects拓展 和 Decorators
 
 **本章尚未完成，请先不要编辑本章**
 
+ES6中新增的类（`classes`) 提供了一种以原型链来模仿传统上基于类编程的模式。而新增的符号`Symbol`则是一种新的基本类型（JS中的第七种基本类型，另外六种为`undefined`、`null`、布尔值（Boolean）、字符串（String）、数值（Number）、对象（Object）），它可以用来定义不可变值。本章中，我们将首先讨论类和符号，之后我们还将对对象的拓展及装饰器进行简单的讲解。
 
+## 类
 
-前面我们已经学习了ES6对JS的基本改进，是时候学习一些别的特性了--classes 和 symbols。ES6中新增的类（classes）提供了一种以原型链来模仿传统基于类编程的模式。而Symbol则是JavaScript中的一种新的基本类型（像字符串，布尔值，数值一样），它可以用来定义协议，本章中，我们将说明这是什么意思。本章说完类和`symbols`后将继续讨论一些新增如`ES6`的内置静态方法。
+我们知道，JavaScript是一种基于原型链的语言，ES6中新增的类和其它面向对象语言中的类有很大的不同，JS中，类实际上是一种基于原型链的语法糖。类可以用以拓展其它类，比如说，我们可以通过简单的语法拓展内置的`Array`，而如果用ES6之前的语法实现，会复杂很多。
 
-## Classes
+### 类的基础
 
-JavaScript是一种基于原型链的语言，新增的类可以看做一种基于原型链的语法糖。原型继承和类之间的最大差别在于，类可以拓展其它类，这使得我们可以拓展内置的`Array`，而这用ES6之前的语法实现是很复杂的。
+基于已有的知识学习新知识是一种非常好的学习方法，这样我们会对新特性给我们带来的便利性感触更深。基于JS中类实际上是一种基于原型链的语法糖，我们先简单复习基于原型链的JavaScript构造器该怎么使用，然后我们用ES6中类语法实现作为对比。
 
-### 类基础
-
-学习新知识之前，复习一下已存的结构是一个很好的主意，然后再看新特性给这些已有的结构带来了那些改进。基于此，本文将先简单复习基于原型链的JavaScript构造器，然后把它和ES6中新增的类语法做对比。
-
-下面代码中，我们使用添加了若干方法的构造函数表示一种水果。构造函数的参数为水果的名称`name`和卡路里含量`calaries`，默认该水果只有一块`pieces=1`,`.chop`方法可以为该水果分隔另外一块，此外`.bite`方法，表示传入`.bite`方法的`person`将吃一口该水果，并使得饱腹感`satiety`等于总卡路里量减去剩余的水果块的卡路里量。
+下面代码中，我们构建了构造函数`Fruit`用以表示水果的特征。构造函数接收两个参数，水果的名称--`name`，水果的卡路里含量--`calaries`。我们在`Fruit`构造函数中设置了默认的块数 `pieces=1`,该构造函数的 `chop` 方法表示切水果的行为，每次调用会使得块数加一，`bite`方法接收一个名为`person`的参数，它是一个对象，每次调用，该 `person` 将吃掉一块水果，`person` 的饱腹感 `person.satiety ` 将相应的增加，增加值为一块水果的`calaries`值，水果的总的卡路里值 `this.calories`将减少相应的值。
 
 ```js
 function Fruit(name, calories) {
@@ -36,7 +34,7 @@ Fruit.prototype.bite = function (person) {
 }
 ```
 
-尽管上面的代码很简单，但是它们也足以让我们来记录一些事情了。这里我们有一个构造函数，这个构造函数接收一些参数，并在其中定义了一些事件，一些属性。下述代码表示我们如果创建`Fruit`的实例，一个`person`将该实例水果分隔为四块并吃了三口。
+下面我们如果创建一个`Fruit`构造函数的实例，调用三次`chop`将实例`apple`分为四块，新建`person`对象，传入并调用三次`bite`方法，把`apple`吃掉三块。
 
 ```js
 const person = { satiety: 0 }
@@ -55,7 +53,7 @@ console.log(apple.calories)
 // <- 35
 ```
 
-如果我们使用的是Class，如下面代码所示，构造函数被声明为水果类的显式成员，方法遵循对象字面方法定义语法。如果我们把`class`语法和基于原型的语法做对比，你会发现我们的方法使用显式声明的同时大量减少了样本代码的使用即省略了`fruit.prototype`。事实上，将方法全部声明在`class`的块中也有助于读者理解，使得我们的类意图明确，将构造函数显式地作为`fruit`的方法成员，与基于原型的类语法相比也更容易理解。
+作为对比，下面我们使用类来做和上面一样的事情，在类中，我们显式使用`constructor`方法做为构造方法（其中`this`指向类的实例），在类中定义方法类似在对象字面量中定义方法如`chop`,`bite`。对比基于类和基于原型链的语法，我们会看出，类的所有的方法都声明在`class`的块中，不需要再使用`Fruit.prototype`这类样本代码，与基于原型的语法比起来，类看起来更加清晰易懂。
 
 ```js
 class Fruit {
@@ -79,11 +77,11 @@ class Fruit {
 }
 ```
 
-你可能注意到这里有一个容易被忽略的细节，我们的`Fruit`类的方法之间没有逗号，这里并不是我写错了，这是类语法的要求，这种要求帮忙我们避免了一种错误，即把普通的对象和类互换，它们其实是不一样的。同时这样做，也为未来类的改进做下铺垫，未来类中可能还会添加`public`或`private`类区域。
+在类中定义方法和使用对象字面量类似，但是一个很大的不同在于**方法之间不能使用逗号**，这是类语法的要求。这种语法要求帮我们避免了混用普通的对象和类的错误，类和对象其实是不一样的。这种要求的另外一个好处在于为未来类的改进做下了铺垫，未来JS的类中可能还会添加`public`或`private`等，这和对象差别就更大了。
 
-上述我们基于类的代码和基于原型链的代码是一样的。`Fruit`的行为一点也不会变，其API也没有变。基于类的方法中，我们实例化了apple，把它切为小块，然后吃掉了其中的大部分这些事情在基于类的`Fruit`中同样会做。
+实际上，上述我们基于类的代码和基于原型链的代码是一样的。两种`Fruit`都可以吃，都可以切小块。
 
-值得注意的是，类声明并不会被提升到作用域的顶部，就像函数声明和函数表达式一样，类也可以被声明为表达式，你可以像下述代码中这样，声明类名
+对了，忘了说了，类声明并不会被提升到作用域的顶部，此外像函数声明和函数表达式一样，类也可以被声明为表达式，你可以像下述代码中这样，声明类名：
 
 ```js
 const Person = class {
@@ -93,9 +91,10 @@ const Person = class {
 }
 ```
 
-类可以作为函数的返回值，这使得创建类工厂非常容易，在下面的例子中我们创建一个动态的箭头的函数，它接受一个名为`name`的参数，然后通过`super()`把它反馈给其父类`Person`.
+类还可以作为函数的返回值，这使得创建类工厂非常容易，如下例所示，代码中的箭头函数接收了一个名为`name`的参数，通过`super()`方法把这个参数反馈给其父类`Person`.这样就创建了一个基于`Person`的新类：
 
 ```js
+// 类声明的第二种方法，Name = class{},另外一种方法为class Name {}
 const createPersonClass = name => class extends Person {
   constructor() {
     super(name)
@@ -109,22 +108,19 @@ const jake = new JakePerson()
 
 ### 类中的属性和方法
 
-值得我们注意的是类声明中的`constructor`方法是可选的。下面用类声明和用常规构造函数声明的`Fruit`是一样的：
-
-
+类声明中的`constructor`方法是可选的。下面用类声明和用常规构造函数声明的`Fruit`是一样的：
 
 ```javascript
+// 用类声明Fruit
 class Fruit {
 }
+
+// 使用构造函数声明Fruit
 function Fruit() {
 }
 ```
 
-
-
-所有被传入`Log()`的参数都将作为`Log`中`constructor`的参数，这些参数可以用以初始化类的实例。
-
-
+所有传入`Log()`的参数都将作为`Log`中`constructor`的参数，这些参数将用以初始化类的实例：
 
 ```javascript
 class Log {
@@ -136,10 +132,7 @@ new Log('a', 'b', 'c')
 // <- ['a' 'b' 'c']
 ```
 
-
-
-下面的代码则表示在创建类`Counter`类的实例时，我们会为该实例初始化一个名为`count`的属性。`get next`方法则表示类`Counter`实例将有一个`next`方法，用以返回调用调用结果。
-
+下面的代码中，我们定义了类`Counter`，在`constructor`中定义的代码会在实例化类时自动执行，这里我们在实例化时为实例添加了一个`count`属性，`get next`方法则表示所有类`Counter`实例都将有一个`next`方法，用以返回调用该方法的调用次数+`start`的值：
 
 
 ```javascript
@@ -153,9 +146,7 @@ class Counter {
 }
 ```
 
-
-
-你可以像下面这样使用`Counter`类，每一次`.next`被调用的时候，`count`值增加1，虽然有效，但是这种方法一般说来比使用`get`属性访问器其要好，我们需要注意，不应该乱用`get`这里属性访问器。滥用属性访问器的对象一般都会变得让人疑惑。
+下面我们新建了`Counter`类的实例`counter`，之后每一次`counter`的`.next`被调用的时候，`count`值增加1，我们需要注意，不应该乱用`get`这里属性访问器。滥用属性访问器的对象一般都会变得让人疑惑。
 
 ```javascript
 const counter = new Counter(2)
@@ -167,11 +158,10 @@ console.log(counter.next)
 //  4
 ```
 
+> get 语法将一个对象属性绑定到查询该属性时将被调用的一个函数上。访问属性时能返回一个动态计算后的值, 或希望不通过使用明确的方法调用而显示内部变量的状态.在JavaScript中, 能通过使用 getter 实现；
+> set 语法绑定一个属性，其后跟着一个函数，当为该函数设置为某个值时，其后的函数将被调用；
 
-
-当与设置器配对时，访问者可能会在对象及其底层数据存储之间提供有趣的桥梁。我们可以考虑如下例子，这里我们定义了一个类，使用提供的存储`key`，它可以用来在`localStorage`中存储和取出`JSON`数据。
-
-
+当结合使用`getter`和`setter`时，我们可以完成一些神奇的事情，如下例中，我们定义了一个类`LocalStorage`，使用提供的存储`key`，可以在读取`data`值时，同时使它在`localStorage`中存储和取出相关数据。
 
 ```javascript
 class LocalStorage {
@@ -187,9 +177,7 @@ class LocalStorage {
 }
 ```
 
-
-
-你可以按下面这样使用`LocalStorage`类。所有分配给`ls.data`的值将被转换为JSON对象字符串，并存储在`localStorage`中。然后，当需要读取时，想用的`key`将用以在之前存储的内容中读取数据，以JSON的格式进行解析，并返回。
+我们看看如何使用`LocalStorage`类。首先我们新建`LocalStorage`的实例`ls`,传入该实例的`key`为`groceries`,当我们设置`ls.data`为某个值时，该值将被转换为JSON对象字符串，并存储在`localStorage`中，当需要读取时，我们将使用相应的`key`，提取出之前存储在`localStorage`中的内容，以JSON的格式进行解析后返回：
 
 ```javascript
 const ls = new LocalStorage('groceries')
@@ -198,9 +186,7 @@ console.log(ls.data)
 // <- ['apples', 'bananas', 'grapes']
 ```
 
-
-
-除了使用`getters`和`setters`,我们也可以定义常规的实例方法，前面我们已经定义过`Fruit`类。下面我们还定义了一个可以吃水果的`Person`类，我们可以实例化一个`fruit`和一个`person`，然后让`person`吃`fruit`。最后由于这个人吃完了整个水果,`person`的`satiety`(饱食度)上升到了40。
+除了使用`getters`和`setters`,我们也可以定义常规的实例方法，前面我们已经定义过`Fruit`类。下面我们再定义了一个可以吃水果的`Person`类，接下来我们实例化一个`fruit`和一个`person`，然后让 `person` 吃 `fruit` 。之后我们让`person`吃完了所有的`fruit`，随之`person`的`satiety`(饱食度)上升到了40。
 
 ```javascript
 class Person {
@@ -220,9 +206,7 @@ console.log(person.satiety)
 // <- 40
 ```
 
-
-
-有时候我们需要在类层面上定义静态方法而不仅仅是在实例层面上定义静态方法，如果使用的是ES6之前的语法，我们将不得不把实例成员添加到原型链中，而静态方法则被直接添加入构造函数中。
+有时候我们可能会希望静态方法直接定义在类上，使用的是ES6之前的语法，我们需要将该方法直接添加于构造函数上，如下面的`Person.isPerson`:
 
 ```javascript
 function Person() {
@@ -236,15 +220,9 @@ Person.isPerson = function (person) {
 }
 ```
 
+类语法则允许你，通过添加前缀`static`来定义静态方法`Persion.isPerson`，
 
-
-就像你使用`get``set`前赘定义`getter`和`setter`一样，类允许你使用通过前缀`static`定义静态方法`Persion.isPerson`。
-
-
-
-下属代码利用了`Array#reduce`方法在类`MathHelper`中定义了一个静态方法`sum`，这个方法将用以计算所有传入所调用函数中的参数的总和。
-
-
+下属代码我们给类`MathHelper`中定义了一个静态方法`sum`，这个方法将用以计算实例化时所有传入参数的总和。
 
 ```javascript
 class MathHelper {
@@ -256,11 +234,7 @@ console.log(MathHelper.sum(1, 2, 3, 4, 5))
 // <- 15
 ```
 
-
-
-最后，还需要说明的是你可以结合`getter`，`setter`使用类静态方法，这在维持类全局状态时或者类使用单例模式时非常有用。当然你依旧可以用老方法而不用定义一个你永远不会实例化的类或者只会实例化一次的类，这就是JavaScript，一个高度灵活的语言。
-
-
+不过具体怎么用都取决于你的偏好，JavaScript就是这么一门非常灵活的语言，你怎么用都行。
 
 ### JavaScript类的拓展
 
