初步修改完 第三章
修改完了Symbol，和Object新增方法以及装饰器相关内容。

--- a/docs/第3章. Classes,Symbols,Objects 和 Decorators.md
+++ b/docs/第3章. Classes,Symbols,Objects 和 Decorators.md
@@ -1,6 +1,5 @@
 # Classs,Symbols,Objects拓展 和 Decorators
 
-**本章尚未完成，请先不要编辑本章**
 
 ES6中新增的类（`classes`) 提供了一种以原型链来模仿传统上基于类编程的模式。而新增的符号`Symbol`则是一种新的基本类型（JS中的第七种基本类型，另外六种为`undefined`、`null`、布尔值（Boolean）、字符串（String）、数值（Number）、对象（Object）），它可以用来定义不可变值。本章中，我们将首先讨论类和符号，之后我们还将对对象的拓展及装饰器进行简单的讲解。
 
@@ -236,11 +235,9 @@ console.log(MathHelper.sum(1, 2, 3, 4, 5))
 
 不过具体怎么用都取决于你的偏好，JavaScript就是这么一门非常灵活的语言，你怎么用都行。
 
-### JavaScript类的拓展
+### 类的继承
 
-你可以使用普通的JavaScript来拓展`Fruit`类，就像下面这样，我们声明子类时用到了深奥的`Parent.call(this)`以便能将参数传递给父类，以便我们可以正确地初始化子类，并把子类的接在父类的原型中。你在网上可以找到很多关于原型继承的知识，所以我们在这里就不再赘述了。
-
-
+ES6之前，你可以使用原型链来模拟类的继承，如下代码所示，我们新建了的构造函数`Banana`，用以拓展上文中定义的`Fruit`类，为了`Banana`能够正确初始化,我们需要在`Banana`中调用，`Fruit.call(this, 'banana', 105)`,我们还需要显式的设置`Banana`的`prototype`。
 
 ```javascript
 function Banana() {
@@ -253,9 +250,7 @@ Banana.prototype.slice = function () {
 ```
 
 
-
-鉴于需要记住这些不常用的知识，而且`Object.create`在ES5中才能使用，一般JS开发者都使用库来解决继承问题。比如说Node.js中的`util.inherits`,由于遗留问题，它通常比`Object.create`更受欢迎。
-
+鉴于上述代码的复杂性，一般JS开发者都使用库来解决继承问题。比如说Node.js就提供了`util.inherits`。
 
 
 ```javascript
@@ -270,8 +265,7 @@ Banana.prototype.slice = function () {
 ```
 
 
-
-考虑到除了banana有`name`，并已有确定的`calories`,以及有额外的`slice`方法用以把banana切为12块外，Banana构造函数和`Fruit`构造函数没有区别。下面的代码表现了我们咬(bite)的时候`Banana`的行为：
+除了banana有确定的`name`和`calories`,以及额外的`slice`方法（用来把banana切为12块）外，`Banana`构造函数和`Fruit`构造函数其实没有区别。下面的代码表现了我们执行`bite`时`Banana`的行为：
 
 ```javascript
 const person = { satiety: 0 }
@@ -286,11 +280,7 @@ console.log(banana.calories)
 // <- 96.25
 ```
 
-
-
-Fruit类其实是被继承了，下面的代码中，我们创建了一个Banana类用以继承Fruit类，这种语法非常清晰，我们无须彻底弄明白原型的机制就可以获得我们想要的结果。如果我们想要给`Fruit`类传递参数，我们只需要使用`super`关键字即可，`super`关键字还可以用以调用存在于父类中的方法，比如说`super.chop`,它的使用不限于在`constructor`里面。
-
-
+下面我们用ES6的语法来实现上面的功能，这里我们创建了一个名为`Banana`的类用以继承`Fruit`类。可以看出，这种语法非常清晰，我们无须彻底弄明白原型的机制就可以获得我们想要的结果。我们想要给`Fruit`类传递参数，只需要使用`super`关键字即可。`super`关键字还可以用以调用存在于父类中的方法，比如说`super.chop`,其使用不限于在`constructor`里面。
 
 ```javascript
 class Banana extends Fruit {
@@ -303,15 +293,9 @@ class Banana extends Fruit {
 }
 ```
 
+尽管`class`关键字是静态的，结合JavaScript的函数灵活性。所有返回构造函数的表达式都可以用于拓展，我们因此可以创建一个构造函数工厂，并它当做基类。
 
-
-尽管`class`关键字是静态的，我们还可以结合使用JavaScript的函数的特性和灵活性。所有返回构造函数的表达式都可以用于拓展，我们因此可以有一个构造函数工厂，并它当做基类。
-
-
-
-下面的代码中定义了一个`createJuicyFruit` 的函数，通过使用`super`我们可以给`Fruit`类传入`name`和`calories`,之后所有我们需要做的事情就是拓展`JuicyFruit` 类了。
-
-
+下面的代码中定义了一个`createJuicyFruit` 的函数，通过使用`super`我们可以给`Fruit`类传入`name`和`calories`,这样可以轻易的拓展`createJuicyFruit`类了。
 
 ```javascript
 const createJuicyFruit = (...params) =>
@@ -332,45 +316,41 @@ class Plum extends createJuicyFruit('plum', 30) {
 }
 ```
 
-
-
-接下来我们来先讲述`Symbol`,了解`Symbol`对于之后我们理解迭代至关重要，这将在本章后面进行讨论。
-
-
+接下来我们来讲述`Symbol`,了解`Symbol`对于之后我们理解迭代至关重要。
 
 ## Symbols
 
-Symbol是ES6提供的一种新的JavaScript的基本类型。 它代表唯一值，和字符串，数值不同的是，Symbol并没有字符的表达形式，如`text`字符串，或 `1`数值。Symbol的主要目的是用以实现协议，比如说，迭代协议使用Symbol定义对象如何被迭代，我们将在[Iterator Protocol and Iterable Protocol.]()这一节详细阐述。
+Symbol是ES6提供的一种新的JS基本类型。 它代表唯一值，和字符串，数值等基本类型一个很大的不同点在于Symbol没有字符的表达形式。Symbol的主要目的是用以实现协议，比如说，使用Symbol定义的迭代协议规定了对象将如何被迭代，关于这个，我们将在[Iterator Protocol and Iterable Protocol.]()这一章详细阐述。
 
-有三种不同蕾西的Symbol，每一种有不同的使用方法，它们分别是
-- `local Symbol`，这种类型又内置的Symbol包装对象创建，通过反射或者存储引用来使用。
-- `global Symbol`,由另外一个API创建 并且全局可用；
-- `well-konwn Symbol`,内置于JavaScript，用于定义内部语言行为。
+Symbol有三种不同类型，其各有不同的使用方法，三种类型如下：
+- `local Symbol`；
+- `global Symbol`；
+- 语言内置`Symbol`；
 
-我们将讨论全部这三种，看看它们分别该怎么使用，从`local Symbol`说起吧。
+我们一种种来看它们是什么意思，又该如何使用，首先看`local Symbol`。
 
 ### Local Symbol
 
-Symbols 可通过 `Symbol` 包装对象创建，下例中，我们创建了我们的第一个Symbol。
+Local Symbol 通过 `Symbol` 包装对象创建，如下：
 
 ```js
 const first = Symbol()
 ```
 
-尽管你可以在`Number`或`String`前使用`new`操作符，在`Symbol`前却不能使用，否则会抛出错误，这避免了错误和注入`new Number(3) !== Number(3)`这样令人误解的行为，下述代码表现了报错是什么样的：
+这里有一点特别值得我们注意，在`Number`或`String`等包装对象前是可以使用`new`操作符的，在`Symbol`前则不能使用，使用了会抛出错误，如下所示：
 
 ```js
 const oops = new Symbol()
 // <- TypeError, Symbol is not a constructor
 ```
 
-为了调试遍历，新建的`Symbol`可以添加描述：
+为了方便调试，我们可以给新建的`Symbol`添加描述：
 
 ```js
 const mystery = Symbol('my symbol')
 ```
 
-和数值和字符串一样，Symbol是不可变的，但是和这些类型不同的是，Symbol是唯一的。下面代码中，描述并不影响唯一性，由相同描述创建的Symbol依旧是唯一且不相等的。
+和数值和字符串一样，Symbol是不可变的，但是和他们不同的是，Symbol是唯一的。描述并不影响唯一性，由具有相同描述的Symbol依旧是不相等的，下面代码说明了这个问题：
 
 ```js
 console.log(Number(3) === Number(3))
@@ -381,7 +361,7 @@ console.log(Symbol('my symbol') === Symbol('my symbol'))
 // <- false
 ```
 
-Symbols的类别为`symbol`，下述代码显示了对Symbol 使用 `typeof`返回的值：
+Symbols的类别为`symbol`，使用 `typeof` 可得到其类型返回的值：
 
 ```js
 console.log(typeof Symbol())
@@ -390,7 +370,7 @@ console.log(typeof Symbol('my symbol'))
 // <- 'symbol'
 ```
 
-Symbols 可以用作对象的属性名，这里我们用计算属性名来说明如何使用，如下所示，为了使用一个Symbol属性，您需要引用用于创建所述属性的Symbol。
+Symbols 可以用作对象的属性名，这里我们用计算属性名来说明该如何使用，如下：
 
 ```js
 const weapon = Symbol('weapon')
@@ -402,7 +382,7 @@ console.log(character[weapon])
 // <- 'umbrella'
 ```
 
-需要注意的是，许多传统的从对象中提取键的方法中对Symbol无效。下述代码表明`for...in `,`Object,keys`,`Object.getOwnPropertyNames`都不能访问到Symbol 属性。
+需要注意的是，许多传统的从对象中提取键的方法中对Symbol无效，也就是说他们获取不到Symbol。如下代码中的`for...in `,`Object,keys`,`Object.getOwnPropertyNames`都不能访问到 Symbol 类型的属性。
 
 ```js
 for (let key in character) {
@@ -415,27 +395,28 @@ console.log(Object.getOwnPropertyNames(character))
 // <- ['name']
 ```
 
-Symbol的这方面的特性表明，ES6之前的没有Symbol的代码并不会由于Symbol的出现而受影响。类似的，如下代码所示，当将对象解析为JSON时，符号属性将被丢弃。
+Symbol的这方面的特性使得ES6之前的没有使用Symbol的代码并不会由于Symbol的出现而受影响。如下代码中，我们将对象解析为JSON，结果中的符号属性被丢弃了。
 
 ```js
 console.log(JSON.stringify(character))
 // <- '{"name":"Penguin"}'
 ```
 
-这意味着，Symbols绝不是隐藏属性的安全机制。即使在使用反射或序列化方法时不会发现符号属性，符号也会由专用方法揭示，如下一段代码所示。这意味着，Symbols 并非不可枚举的，只是一般情况下它不可见而已，通过`Object.getOwnPropertySymbols`我们可以获取任何对象中的所有`Symbol`.
+不过，Symbols绝不是一种用来隐藏属性的安全机制。由特定的方法，它是可见的，如下所示：
 
 ```js
 console.log(Object.getOwnPropertySymbols(character))
 // <- [Symbol(weapon)]
 ```
 
-现在我们已经知道了Symbol该如何使用，下面我们谈谈它该在什么时候使用？
+这意味着，Symbols 并非不可枚举的，只是它对一般方法不可见而已，通过`Object.getOwnPropertySymbols`我们可以获取任何对象中的所有`Symbol`。
 
-### Symbols的使用案例
+现在我们已经知道了 Symbol 该如何使用，下面我们再讨论下其使用场景。
 
-Symbols可以通过库来使用，用于将对象映射到DOM元素，比如说，一个库需要连接日历的API对象和所提供的DOM元素。ES6之前，并不存在一种清晰的方法可用用以建立DOM和对象之间的映射。你可以给DOM元素添加一个属性指向API，但是这回用自定义属性污染DOM元素，这并不是一种好的实践方法。您必须小心地使用不被其他库使用的属性键，或者更糟糕的是，将来语言本身将使用的属性。这就让您使用一个数组查找表，该表为每个DOM / API对包含一个条目。然后，在一个长期运行的程序中，随着数组查找表越来越大，慢慢的查找操作就越来越慢了。
+### Symbols的使用实例
 
-使用Symbol则完全没有这类问题了，你不用担心定义的属性名会和将来语言中的属性名冲突，它们是唯一的。下述代码表明了如何使用Symbol建立DOM和日历API之间的映射。
+
+使用Symbol则完全没有这类问题了，你不用担心定义的属性名会和将来语言中的属性名冲突，它们是唯一的，我们可以按下面这样使用：
 
 ```js
 const cache = Symbol('calendar')
@@ -450,14 +431,13 @@ function createCalendar(el) {
 }
 ```
 
-ES6 提供的一种新数据类型`WeakMap`,它可以用于唯一地将对象映射到其他对象，而不需要使用数组或将外部属性放置在我们希望查找的对象上。和数组查找表比起来，`WeakMap`查找复杂度始终为O(1),我们将在[ Leveraging ECMAScript Collections]()一节和其它ES6内置对象详细讨论`WeakMap`。
+ES6 提供的一种名为`WeakMap`的新数据类型,它用于唯一地将对象映射到其他对象。和数组查找表比起来，`WeakMap`查找复杂度始终为O(1),我们将在 [Leveraging ECMAScript Collections]() 一章和其它ES6新增数据类型一起讨论。
 
-### 通过符号定义协议
+### 使用符号定义协议
 
-早些时候，我们假设`Symbol`用以定义协议。协议是定义行为的通信契约或约定。简单说来，库可用使用Symbol ,然后依附于该库的对象就可以使用Symbol了。
+前文中，我们说过 `Symbol` 可以用以定义协议。协议是定义行为的通信契约或约定。简单说来，库可用使用Symbol ,然后依附于该库的对象就可以使用Symbol了。
 
-考虑下面的代码，这里我们用了一个特殊的`toJSON`方法，用以限制可以被`JSON.stringify`序列化的对象。正如你所看到的，序列化`character`对象返回了`toJSON`方法返回的对象的序列化模式。
-
+下述代码中，我们给`character`对象添加了一个`toJSON`方法，用以指定对该对象使用`JSON.stringify`时被序列化的对象。
 
 ```js
 const character = {
@@ -470,7 +450,7 @@ console.log(JSON.stringify(character))
 // <- '"{"key":"value"}"'
 ```
 
-相比之下，如果`toJSON`不是一个函数，原始的`character`对象将被序列化，`toJSON`只是其中一个属性，就像下面代码中那样。出现这种不一致的原因在于使用了常规属性来定义行为。
+如果`toJSON`不是函数，执行`JSON.stringify`时`character`对象整体将被序列化。
 
 ```js
 const character = {
@@ -481,7 +461,7 @@ console.log(JSON.stringify(character))
 // <- '"{"name":"Thor","toJSON":true}"'
 ```
 
-让`toJSON`修饰符是一个Symbol则更好，原因是它不会影响其它的对象属性，考虑到symbols 是唯一的，永远不会被序列化的，不调用`Object.getOwnPropertySymbols`永远不会暴露出来的，当制定一个`JSON.stringify`和对象如何被序列化的协议时，使用Symbol将是一种更好的选择。以下代码表明了如何使用Symbol定义`stringify`函数的序列化行为。
+如果`toJSON`修饰符是Symbol类型，它就不会影响其它的对象属性了，Symbol本身不调用`Object.getOwnPropertySymbols`永远不会暴露出来的，以下代码中我们用`Symbol`自定义了自定义函数`stringify`：
 
 ```js
 const json = Symbol('alternative to toJSON')
@@ -491,40 +471,30 @@ const character = {
     key: 'value'
   })
 }
-stringify(character)
 function stringify(target) {
   if (json in target) {
     return JSON.stringify(target[json]())
   }
   return JSON.stringify(target)
 }
+stringify(character)
 ```
 
-使用Symbol 意味着我们需要使用计算属性名来在对象字面量中直接定义`json`的行为。它同样意味着，这种行为不会和其它的用户定义属性或者以后JS语言可能会加入的属性有冲突。另一个不同的地方在于，用户通过`stringify `函数是可以使用`json`符号的，因此它们可以自定义行为，我们可以通过下面的代码通过`stringify`暴露`json`符号，如下所示，这将绑定`stringify`函数和修改其行为的符号。
+使用 Symbol 需要我们使用计算属性名在对象字面量中定义 `json`，这样做我们定义的变量就不会和其它的用户定义的属性或者以后JS语言可能会加入的属性有冲突。
 
-```js
-stringify.as = json
-```
-
-通过暴露`stringify`函数，我们可以使用`stringify.as`符号了，这就让使用者可以通过自定义的符号来调整对象的行为了。
-
-当谈到使用使用符号来描述行为的优点时，与传递给`stringify`函数一个选项成对比的是，我们还需要考虑以下几点。首先，给函数添加选项参数改变了它的公有API，而改变一个函数的内在行为来支持另外一个符号不会影响公有API。使用每一个选项包含不同对象的`object`对象缓和了这一影响，不过在每一个函数调用中要求一个`options`对象并不总是很方便。
-
-通过符号定义行为的优点是你可以增强或自定义对象的行为而不影响除了所分配的符号值之外的所有东西，原始的内部实现机制很可能也不会受影响。使用符号的好久就在于，当引入新的语言特性时，您不会受到名称冲突的影响。
-
-除了local Symbol，还有一种`global symbol`它可以跨代码域访问，且听我细细道来。
+接下来我们继续讲解下一类符号--`global symbol`，这类符号可以跨代码域访问。
 
 ### 全局符号
 
-代码域指的是任何JavaScript表达式的执行上下文，比如说你的应用当前运行的页面，页面中的`<iframe>`，`eval`运行的脚本，以及任意类型的`worker`，比如说`web worker`,`service workers`或者`shared workers`,这些执行上下文每一种都有其全局对象比如说页面的全局对象`window`不能被`ServiceWorker`使用。与此不同的是，全局符号可以被任何代码域访问。
+代码域指的是任何JavaScript表达式的执行上下文，它可以是你的应用当前运行的页面、页面中的`<iframe>`、由`eval`运行的脚本、任意类型的`worker`（`web worker`,`service workers`或者`shared workers`）等等。这些执行上下文每一种都有其全局对象，比如说页面的全局对象`window`，但是这种全局对象不能被其它代码域比如说`ServiceWorker`使用。相比而言，全局符号则更具全局性，它可以被任何代码域访问。
 
-有两种和运行时的全局符号交互的方法，它们是`Symbol.for`和`Symbol.keyFor`。我们看看它们分别如何使用？
+有两种方法可以和全局符号有所交互，`Symbol.for`和`Symbol.keyFor`。我们看看它们分别该如何使用？
 
 #### 通过`Symbol.for(key)`获取symbols
 
-`Symbol.for(key)`方法将在运行时范围符号注册表中查找`key`,如果全局注册表中存在`key`则返回该`Symbol`，如果不存在该`key`的Symbol，在全局注册表中将创建以该`key`代表的Symbol，这意味着，`Symbol.for(key)`是幂等的，它先查找，不存在就创建，然后返回查找或新创建的Symbol。
+`Symbol.for(key)`方法将在运行时的符号注册表中查找`key`,如果全局注册表中存在`key`则返回其对于的`Symbol`，如果不存在该`key`对于的Symbol，该方法会在全局注册表中创建`key`值为所查找`key`值的Symbol。这意味着，`Symbol.for(key)`是幂等的（多次执行，结果唯一），先进行查找，不存在则新创建，然后返回查找到的或新创建的Symbol。
 
-下面的代码中，第一次调用`Symbol.for`创建了一个标记为`example`的Symbol，并把它添加到注册表，并返回该Symbol，第二次调用`Symbol.for`由于该`key`已经在注册表中存在，返回了相同的符号，与第一次的返回值相同。
+我们看看使用示例，下面的代码中，第一次调用`Symbol.for`创建了一个key为`example`的Symbol，添加到到注册表，并返回了该Symbol，第二次调用`Symbol.for`由于该`key`已经在注册表中存在，因此返回了之前创建的全局符号。
 
 ```js
 const example = Symbol.for('example')
@@ -532,11 +502,11 @@ console.log(example === Symbol.for('example'))
 // <- true
 ```
 
-全局的符号注册表通过`key`跟踪符号，需要注意的是`key`也将用做新创建的Symbol的`description`。考虑到这些符号在运行时是全局的，你可能需要在符号keys之前添加前缀用以区分你的逐渐或者库，用以避免潜在的命名冲突。
+全局的符号注册表通过`key`标记符号，`key`还将作为新创建符号的描述信息。考虑到这些符号在运行时是全局的，在符号的key前添加前缀用以区分你的代码可以有效避免潜在的命名冲突。
 
-#### 使用`Symbol.keyFor(symbol)`来提取符号的keys
+#### 使用`Symbol.keyFor(symbol)`来提取符号的key
 
-比如说现在存在一个符号`symbol`，`Symbol.keyFor(symbol)`将返回全局注册表中该`symbol`对应的`key`值。下面的例子表明了我们如何使用`Symbol.keyFor`来获取对应`Symbol`的`key`:
+比如说现存一个名为为`symbol`的全局符号，使用`Symbol.keyFor(symbol)`将返回全局注册表中该`symbol`对应的`key`值。我们看以下实例:
 
 ```js
 const example = Symbol.for('example')
@@ -544,14 +514,14 @@ console.log(Symbol.keyFor(example))
 // <- 'example'
 ```
 
-请注意，如果该`symbol`不在全局运行注册表中，该方法将返回`undefined`。
+值得注意的是，如果符号非全局符号，该方法将返回`undefined`。
 
 ```js
 console.log(Symbol.keyFor(Symbol()))
 // <- undefined
 ```
 
-同样需要注意的是在全局符号注册表中不可能用`local Symbol`匹配到值，即使它们的描述相同也是如此，这是因为，local Symbol 不是全局符号注册表的一部分，如下代码所示：
+在全局符号注册表中，使用`local Symbol`是匹配不到值的，即使它们的描述相同也是如此，local Symbol 不是全局符号注册表的一部分：
 
 ```js
 const example = Symbol.for('example')
@@ -559,12 +529,12 @@ console.log(Symbol.keyFor(Symbol('example')))
 // <- undefined
 ```
 
-现在你已经知道了全局符号注册表的两种用法，下面我们来看看还有那些别的值得考虑的因素。
+全局符号相关的方法主要就是这两个了，下面我们看看该如何实际使用：
 
 
-#### 最佳实践和需要考虑的因素
+#### 全局符号实践
 
-全局的运行注册表意味着符号可以被任何代码域获取，在任何代码域中调用，全局的注册表都将返回相同的对象指向。下面的例子中，我们展示了`Symbol.for`是如何在一个页面和一个`<iframe>`中返回相同的Symbol的。
+某符号为全局符号意味着该符号可以被任何代码域获取，且在任何代码域中调用，它们都将返回相同的值。下面的例子，我们使用`Symbol.for`分别在页面中和`<iframe>`中查找key 为`example` 的Symbol，实践表明，它们是相同的。
 
 ```js
 const d = document
@@ -576,16 +546,15 @@ console.log(s1 === s2)
 // <- true
 ```
 
-使用全局符号需要权衡，一方面，它使得库可以容易的对外暴露其Symbol，另一方面，它们也可以使用`local Symbol`暴露他们的API，很明显，符号注册表在符号需要夸代码域使用时非常有用，比如说跨`ServiceWorker`和浏览器页面。当你不想使用引用而直接想直接使用`Symbol`时，全局符号也非常方便，你可以直接调用，因为一个`key`永远对应的都是同一个`Symbol`，你需要记住，虽然有这些优点，如果你使用类似于`each`,`contains`这种泛滥形Symbol名称，可能还是会导致不必要的冲突后果。
+在使用全局符号就像我们使用全局变量一样，合理使用会非常方便，但是不合理使用又会造成灾难。全局符号在符号需要夸代码域使用时非常有用，比如说跨`ServiceWorker`和浏览器页面，但是滥用会导致Symbol难易管理，容易冲突。
 
-还有另外一种类型的Symbol，内置的常用Symbol。
+下面我们来看，最后一种Symbol，内置的常用Symbol。
 
-### 众多周知的Symbols
+### 内置的常用Symbol
 
-到现在为止，我们已经讨论了可以通过`Symbol`函数创建的local Symbol 和 可以通过`Symbol.for`创建的全局Symbol。我们将讲到的第三种也是最后一种Symbol就是`well-known Symbol`了。它们内置于语言中而非由JS开发者创建，它们为内置的语言行为添加了钩子，允许你拓展或者自定义这门语言里在ES6之前不能使用的一些方面。
+内置的常用Symbol为JS语言行为添加了钩子，在一定程度上允许你拓展和自定义ES6语言。
 
-
-描述在不破坏代码的情况下，如何通过Symbols 给语言添加额外的功能的最好的例子是`Symbol.toPrimitive` 符号。它可以用分配一个函数来确定一个对象如何对应到一个默认值。该函数接收一个`hint`参数，参数可以是`string`,`number`或`default`，用以指明默认值的期待类型。
+`Symbol.toPrimitive`符号，是描述如何通过 Symbols 给语言添加额外的功能的最好的例子，这个Symbol的作用是，依据给定的类型返回默认值。该函数接收一个`hint`参数，参数可以是`string`,`number`或`default`，用以指明默认值的期待类型。
 
 ```js
 const morphling = {
@@ -599,7 +568,7 @@ const morphling = {
     return '[object Morphling]'
   }
 }
-console.log(+morphling)
+console.log(+morphling) // + 号 
 // <- Infinity
 console.log(`That is ${ morphling }!`)
 // <- 'That is a lot!'
@@ -607,10 +576,12 @@ console.log(morphling + ' is powerful')
 // <- '[object Morphling] is powerful'
 ```
 
-
-另一个众所周知的symbol是`Symbol.match`,是个常规的设置`Symbol.match`为`false`的常规表达式如果被传递给`.startWith`,`.endWith`或`.includes`时将被视为字符串字面量。这三个函数是ES6提供的新的字符串方法。首先`.startsWith`用于判断某个字符串是否已另外一个字符串开头，`.endsWith`则用以判别该字符串是否已某字符串结尾，`.includes`方法则在某字符串包含另一个字符串时返回`true`。下述代码表明了`Symbol.mathc`如何用以对比一个字符串和另一个由正则表达式表示的字符串。
+另一个常用的内置Symbol是 `Symbol.match` ,该Symbol指定了匹配的是正则表达式而不是字符串，以`.startWith`,`.endWith`或`.includes`，这三个ES6提供新字符串方法为例。
 
 ```js
+"/bar/".startsWith(/bar/); 
+// Throws TypeError, 因为 /bar/ 是一个正则表达式
+
 const text = '/an example string/'
 const regex = /an example string/
 regex[Symbol.match] = false
@@ -621,9 +592,9 @@ console.log(text.startsWith(regex))
 如果正则表达式没有通过Symbol修改，这里将抛出错误，因为`.startWith`方法希望其参数是一个字符串而非正则表达式。
 
 
-#### 不在注册表中但是跨域共享
+#### 内置Symbol不在全局注册表中但是跨域共享
 
-语言内置的这些Symbol是跨代码域共享的，下述代码展示了`Symbol.iterator`在`<iframe>`中是具有相同的指向的。
+这些内置的Symbol是跨代码域共享的，如下所示：
 
 ```js
 const frame = document.createElement('iframe')
@@ -632,28 +603,28 @@ Symbol.iterator === frame.contentWindow.Symbol.iterator
 // <- true
 ```
 
-需要注意的是，虽然语言内置的这些Symbol是跨代码块共享的，但是他们并不在全局符号注册表中，下述代码中，我们想要找到`Symbol.iterator`的`key`值，返回值是`undefined`，这意味着符号并不在全局注册表中。
+需要注意的是，虽然语言内置的这些Symbol是跨代码块共享的，但是他们并不在全局符号注册表中，我们在下述代码中想要找到`Symbol.iterator`的`key`值，返回值是`undefined`就说明了这个问题。
 
 ```js
 console.log(Symbol.keyFor(Symbol.iterator))
 // <- undefined
 ```
 
-另外一个常用的符号是`Symbol.iterator`,它被不同的语言用以遍历一个序列，就像在任意对象中定义一个函数并分配给一个用符号定义的属性。下一章中，我们将详细讲述`Symbol.iterator`的细节内容，并广泛在迭代器和迭代协议中使用它。
+另外一个常用的符号是`Symbol.iterator`,它为每一个对象定义了默认的迭代器。我们将在下一章中详细讲述`Symbol.iterator`的细节内容。
 
 ## 内置对象的改进
 
-我们在[ES6 Essentials]()一章，已经讲述过对象字面量语法的改进，关于对象一些内置的静态方法的改进我们却还未涉及到。是时候讨论一下有哪些新改变了。
+我们在[ES6 Essentials]()一章，已经讲述过对象字面量语法的改进，这里我们再补充一下内置对象新增的方法。
 
-前面我们说过`Object.getOwnPropertySymbols`的意思，下面我们看看`Object.assign`,`Object.is`以及`Object.setPrototypeOf`分别是什么意思。
+除了前面讨论过的`Object.getOwnPropertySymbols`，新增的对象方法还有`Object.assign`,`Object.is`以及`Object.setPrototypeOf`。
 
 ### 使用`Object.assign`来拓展对象
 
-需要给配置对象提供默认值的需求我们都非常熟悉，一般说来，库或者设计良好的交互组件都有明智的默认值用以应对大多数使用情况。
+现在的前端开发者肯定特别肯定非常数据给中库的使用，一些库在允许我们自定义某些行为的同时也给我们常用的方法属性指定了默认值。
 
-以一个Markdown库来说，可能会仅仅通过一个`input`参数转行Markdown为Html。这就是它最典型的使用示例，简单的解析Markdown，因此该库不需要用户提供任何选项。然后，该库可能支持很多不同的用以修改渲染行为的选项，比如说有一个选项运行`<script>`或`<iframe>`标签，或者一个选项用css来高亮渲染代码片段。
+假如说现在有这么一个Markdown库。其接收一个 `input` 参数，依据`input`代表的Markdown内容，转换其为 Html 是默认的用法，用户不需要提供其它参数就可以简单实用这个库。不过，该库还支持多个不同的配置，比如说通过配置可以添加`<script>`或`<iframe>`，也可以启用 css 来高亮渲染代码片段。
 
-比如说，设想，你希望提供一组如下的默认选项
+比如说，该库的默认选项如下：
 
 ```js
 const defaults = {
@@ -663,14 +634,14 @@ const defaults = {
 }
 ```
 
-一个人可能使用解构将`defaults`对象作为`options`为默认配置参数，在本例中，如果用户想要自定义，用户必须提供每个选项的值。
+我们可以使用解构将`defaults`对象设置为`options`的默认值，在本例中，如果用户想要自定义，用户必须提供每个选项的值。
 
 ```js
 function md(input, options=defaults) {
 }
 ```
 
-我们需要用某种方法将默认值和用户提供的值合并使用，这就是`Object.assign`的使用场景了，如下代码所示，我们从一个空对象`{}`开始，`Object.assign`将修改它最终返回最后的结果，实现过程是这样的，我们首先复制默认值，然后复制新添加的option到覆盖重复值，因此，最终的结果`config`对象将会是包含默认值和用户自定义值的对象。
+`Object.assign` 在这时就可以用来非常方便的合并默认值和用户提供的值，如下代码所示，我们传入`{}`作为`Object.assign`的第一个参数，这个参数在之后将不断依据后面的参数修改，并在最后返回。具体过程如下，我们首先复制defaults到{}中，然后再复制options到前面的结果中，覆盖重复值，最终的结果`config` 对象就会是一个包含默认值和用户自定义值的对象了。
 
 ```js
 function md(input, options) {
@@ -679,12 +650,11 @@ function md(input, options) {
 ```
 
 
-> ####理解`Object.assign`的目标
+> ####理解`Object.assign`
 
-> `Object.assign`函数将改变它的第一个参数，它的签字将是`(target, ...sources)`,所有的资源 都会被应用到`target`上，一个个的source一个个的property。
+> `Object.assign`函数将改变它的第一个参数，它的参数可以归纳为`(target, ...sources)`,所有的 sources 都会被应用到`target`上。
 
-
-> 考虑如下的场景，如果我们没有传递一个空对象作为目标对象而是传递了`defaults`作为目标对象，那么`Object.assign()`将改变`defaults`对象的值，这会导致默认值的丢失，获得一些错误的值，在复制对象的过程中，虽然这样会得到和前面那个例子中一样的值，我们的默认值也被更改了，这改变了`md`调用时的结果。
+> 如果这里我们的第一个参数不是一个空对象，而是`defaults`，那么`Object.assign()`执行结束之后，`defaults`对象的值也将被改变，虽然这里我们会得到和前面那个例子中一样的结果，但是`default`值被改变，可能也会导致一些意想不到的问题。
 
 >
 ```js
@@ -693,10 +663,9 @@ function md(input, options) {
 }
 ```
 
-> 考虑到这个原因，最好每次都给target传递一个新的空对象。
+> 因此，最好把`Object.assign`的第一个参数始终设置为`{}`。
 
-
-对于任何拥有默认值，用户又可以重新分配属性值的属性，用户提供的值将占主导地位。`Object.assign`是这样工作的，首先我们取得第一个传递给它的参数，我们称之为`target`，然后遍历所有其它的参数，（我们把其它的参数称为`source`）。对于`sources`中的每一个source，它的没一个值都将被迭代并分配给`target`.结果是，最右边的`sources`，在本例中也就是`options`对象，将覆盖重写前面的分配值，过程如下述代码所示：
+我们使用如下代码加深你对`Object.assign`的理解：
 
 ```js
 const defaults = {
@@ -714,9 +683,7 @@ applyDefaults({ second: false })
 // <- { first: 'first', second: false }
 ```
 
-在语言内置`Object.assign`之前，开发者已经进行了很多类似的实践，使用类类似`assign`或者`extend`这样的名字。添加`Object.assign`到语言中使得这个需求用起来非常简单。
-
-需要注意的是，`Object.assign`只考虑可枚举的属性，包括字符串属性和符号属性。
+需要注意的是，`Object.assign`只会考虑可枚举的属性（包括字符串属性和符号属性）。
 
 ```js
 const defaults = {
@@ -733,7 +700,7 @@ console.log(Object.assign({}, defaults, options))
 // <- { [Symbol('currency')]: 'USD', price: '0.99' }
 ```
 
-需要注意的是`Object.assign`也不是万能的，比如说很多需要需要深复制的能力，`Object.assign`不会对对象进行回归处理，值为对象的将会被`target`直接引用，而不会进行每一项的递归复制。
+不过`Object.assign`也不是万能的，比如说其复制并非深复制，`Object.assign`不会对对象进行回归处理，值为对象的属性将会被`target`直接引用。
 
 下例中，你可能希望`f`属性可以被添加到`target.a`，而保持`b.c`,`b.d`不变，但是实际上，当使用`Object.assign`时，`b.c`和`b.d`属性丢失了。
 
@@ -742,16 +709,16 @@ Object.assign({}, { a: { b: 'c', d: 'e' } }, { a: { f: 'g' } })
 // <- { a: { f: 'g' } }
 ```
 
-同样的，数组也不会获取任何特殊的对待，以下代码中，如果你期待`Object.assign`进行递归处理，你将大失所望。下面的代码中，你可以期待结果中是有`d`的。
+同样的，数据也存在类似的问题，以下代码中，如果你期待`Object.assign`进行递归处理，你将大失所望。
 
 ```js
 Object.assign({}, { a: ['b', 'c', 'd'] }, { a: ['e', 'f'] })
 // <- { a: ['e', 'f'] }
 ```
 
-在本书写作过程中，存在一个处于`stage 3`的ECMAScript提议，用以在对象中使用拓展符，就像之前提到的你可以在ES6的数组等可迭代对象中使用一样。在一个对象上拓展另外一个对象和使用`Object.assign`的结果类似。
+在本书写作过程中，存在一个处于`stage 3`的ECMAScript提议，用以在对象中使用拓展符，其使用类似于数组等可迭代对象。对对象使用拓展和使用`Object.assign`的结果类似。
 
-下述代码表明了一些拓展一个对象的一些属性到另外一个对象上的方法，以及用`Object.assign`该如何使用。你也许也发现了，使用对象拓展更为简洁，如果这个一旦成为标准，它应该被优先使用。
+下述代码展示了对象拓展符的使用方法：
 
 ```js
 const grocery = { ...details }
@@ -764,14 +731,12 @@ const grocery = { type: 'fruit', ...details, color: 'red' }
 // Object.assign({ type: 'fruit' }, details, { color: 'red' })
 ```
 
+该提案也包含对象剩余值，使用和数组剩余值类似。
 
-与此对应，该提案也包含对象剩余值，就像数组中的剩余模式一样，任何时候我们解构一个对象时我们可以使用对象剩余值。
-
-下面的例子展示了如何利用对象剩余值获取没有被展示对象名的对象。同样需要注意的是对象剩余值需要位于解构的最后面，就像数组的解构模式一样。
+下面是对象剩余值的使用实例，就像数组剩余值一样，其需要位于结构的最后面：
 
 ```js
-const getUnknownProperties = ({ name, type, ...unknown }) =>
-  unknown
+const getUnknownProperties = ({ name, type, ...unknown }) =>  unknown
 getUnknownProperties({
   name: 'Carrot',
   type: 'vegetable',
@@ -780,7 +745,7 @@ getUnknownProperties({
 // <- { color: 'orange' }
 ```
 
-我们可以利用类似的方法在变量声明中解构对象，下面的例子中，每一个未被明确结构的属性都将位于`meta`对象中。
+我们可以利用类似的方法在变量声明时解构对象，下例中，每一个未明确指明的属性都将位于`meta`对象中：
 
 ```js
 const { name, type, ...meta } = {
@@ -798,7 +763,7 @@ const { name, type, ...meta } = {
 
 ### 使用`Object.is`对比对象
 
-`Object.is`方法和严格相等运算符`===`略有不同，最重要的地方在于`Object.is(a,b)`和`a===b`是相等的，但是有两个不同的地方，那就是`NaN`以及，`-0`和`0`。
+`Object.is`方法和严格相等运算符`===`略有不同。主要表现在两个地方，`NaN`以及，`-0`和`0`。
 
 当`NaN`与`NaN`相比较时，严格相等运算符`===`将返回`false`,因为`NaN`和本身也不相等，`Object.is`则在这种情况下返回`true`.
 
@@ -809,7 +774,7 @@ Object.is(NaN, NaN)
 // <- true
 ```
 
-类似的，使用严格相等运算符比较`0`和`-0`会得到`true`,而使用`Object.is`则会返回`false`.
+使用严格相等运算符比较`0`和`-0`会得到`true`,而使用`Object.is`则会返回`false`.
 
 ```js
 -0 === +0
@@ -818,13 +783,12 @@ Object.is(-0, +0)
 // <- false
 ```
 
-这种不同看起来没什么大不了的，但是由于`NaN`的怪癖行为，它的处理一直都很沉重，比如说`typeof NaN`会返回`number`,而它自己和自己又不相等。
 
 ### Object.setPrototpyeOf
 
-`Object.setPrototypeOf`的作用就像它的名字描述的那样，它设置它的原型指向另外一个对象。与遗留方法`__proto__`相比，它被认为是设置原型的正常方法。
+`Object.setPrototypeOf`，名如其意，它用以设置某个对象的原型指向的对象。与遗留方法`__proto__`相比，它是被认可的设置对象原型的方法。
 
-在ES6之前，我们在ES5中引入了`Object.create`，利用这种方法，我们可以一个对象，这个对象以任何传递给`Object.create`的参数作为原型链。如下所示;
+还记得吗，我们在ES5中引入了`Object.create`，这个方法允许我们以任何传递给`Object.create`的参数作为新建对象的原型链：
 
 ```js
 const baseCat = { type: 'cat', legs: 4 }
@@ -832,7 +796,7 @@ const cat = Object.create(baseCat)
 cat.name = 'Milanesita'
 ```
 
-不过`Object.create`方法只能在给新创建的对象指定原型，然而，使用`Object.setPrototypeOf`可以用以改变任何已经存在的对象的原型链，如下代码所示：
+`Object.create`方法只能在新创建的对象时指定原型，`Object.setPrototypeOf`则可以用以改变任何已经存在的对象的原型链：
 
 ```js
 const baseCat = { type: 'cat', legs: 4 }
@@ -842,31 +806,21 @@ const cat = Object.setPrototypeOf(
 )
 ```
 
-需要注意的是与`Object.create`比起来，`Object.setPrototypeOf`具有严重的性能问题，因此在你决定使用前还需要仔细考虑。
+与`Object.create`比起来，`Object.setPrototypeOf`具有严重的性能问题，因此在如果你很在乎这个，使用前应好好考虑。
 
 > #### 对性能问题的说明
-> 使用`Object.setPrototypeOf`来改变一个对象的原型是一个昂贵的操作，MDN是这样解释这个问题的：
-> 考虑到现代浏览器JavaScript引擎优化属性访问的本质，改变一个对象的原型是一个非常慢的操作，在每一个浏览器和每一个JavaScript引擎中，改变继承在性能方面的影响是微妙而遥远的，时间不仅仅发生在`obj.__proto__`语句中，而且还可能拓展到任何原型被改变的对象。如果你考虑性能的影响，你应该避免改变原型，推荐的做法是，使用需要的原型使用`Object.create()`创建新的对象。
-> 
+> 使用`Object.setPrototypeOf`来改变一个对象的原型是一个昂贵的操作，MDN是这样解释的：
+> 由于现代 JavaScript 引擎优化属性访问所带来的特性的关系，更改对象的 [[Prototype]]在各个浏览器和 JavaScript 引擎上都是一个很慢的操作。其在更改继承的性能上的影响是微妙而又广泛的，这不仅仅限于 obj.__proto__ = ... 语句上的时间花费，而且可能会延伸到任何代码，那些可以访问任何[[Prototype]]已被更改的对象的代码。如果你关心性能，你应该避免设置一个对象的 [[Prototype]]。相反，你应该使用 Object.create()来创建带有你想要的[[Prototype]]的新对象。
+
 
 
 ### 装饰器(Decorators)
 
 对于大多数编程语言而言，装饰器不是一个新概念。在现代编程语言中，装饰器模式相当常见，c# 中 有`attributes`,Java中有`annotations`，Python中有`decorators`等等。JavaScript的装饰器提案也正在进行中，目前其处于Stage2。
 
-#### JavaScript 装饰器 基础介绍
 
-JavaScript中的装饰器语法和Python的非常类似。JavaScript的装饰器可以应用于任何对象或者静态声明的属性。诸如对象字面量声明或`class`声明，甚至它们可以吃`get`,`set`存储器，甚至`static`属性。
+JavaScript中的装饰器语法和Python的非常类似。JavaScript的装饰器可以应用于任何对象或者静态声明的属性。诸如对象字面量声明或`class`声明，甚至它们在`get`,`set`,`static`前。
 
-该提议中表明，装饰器的定义使用`@`之后是一系列的点符号，以及可选的参数列表？？。下面是一些例子：
-
-- `@decorators.frozen`是一个有效的装饰器
-- `@decorators.frozen(true)`是一个有效的装饰器
-- `@decorators().frozen()`会出现语法错误
-- `@decorators['frozen']`会出现语法错误
-
-
-`class`声明前可以添加0个或多个装饰器，`class`内部也可以：
 
 ```js
 @inanimate
@@ -882,137 +836,62 @@ class View {
 }
 ```
 
-装饰器的执行类似函数，成员装饰函数获取成员装饰器并返回成员装饰器，成员装饰器和属性装饰器类似，但是呈现不同的形态，下面的代码有一个成员装饰器界面，但是通过装饰器提案定义。一个可选的`finisher`函数被用以接受类构造函数，允许我们被对装饰的对象装修相关操作。
+关于装饰器凹凸实验室的一篇文章解释的比较清楚，大家可以参考[Javascript 中的装饰器](https://aotu.io/notes/2016/10/24/decorator/index.html)
 
+
+> 当装饰器作用于类本身的时候，我们操作的对象也是这个类本身，而当装饰器作用于类的某个具体的属性的时候，我们操作的对象既不是类本身，也不是类的属性，而是它的描述符（descriptor），而描述符里记录着我们对这个属性的全部信息，所以，我们可以对它自由的进行扩展和封装，最后达到的目的呢，就和之前说过的装饰器的作用是一样的。
+> 
+
+**作用于类时**
 ```js
-interface MemberDescriptor {
-  kind: "Property"
-  key: string,
-  isStatic: boolean,
-  descriptor: PropertyDescriptor,
-  extras?: MemberDescriptor[]
-  finisher?: (constructor): void;
+
+function isAnimal(target) {
+    target.isAnimal = true;
+  	return target;
 }
+@isAnimal
+class Cat {
+    ...
+}
+console.log(Cat.isAnimal);    // true
+
+// 相当于
+	
+Cat = isAnimal(function Cat() { ... });
+
 ```
 
-下面的例子中，我们定义了一个`readonly`成员描述符，使得被描述的对象不可写，利用对象剩余值和拓展运算符，我们修改了属性描述符为`non-writable`同时保持了其它部分不变。
-
+**作用于类属性时**
 
 ```js
-function readonly({ descriptor, ...rest }) {
-  return {
-    ...rest,
-    descriptor: {
-      ...descriptor,
-      writable: false
+function readonly(target, name, descriptor) {
+    discriptor.writable = false;
+    return discriptor;
+}
+class Cat {
+    @readonly
+    say() {
+        console.log("meow ~");
     }
-  }
 }
+var kitty = new Cat();
+kitty.say = function() {
+    console.log("woof !");
+}
+kitty.say()    // meow ~
+
+// 相当于
+let descriptor = {
+    value: function() {
+        console.log("meow ~");
+    },
+    enumerable: false,
+    configurable: true,
+    writable: true
+};
+descriptor = readonly(Cat.prototype, "say", descriptor) || descriptor;
+Object.defineProperty(Cat.prototype, "say", descriptor);
 ```
-
-
-类装饰器将装饰`ctor`，被描述类的构造函数，`heritage`参数，当装饰器类拓展其它类时包含了父类，`members`数组，里面是被修饰的类的成员描述符列表。
-
-通过在每一个成员描述符上重用`readonly`成员描述符，我们可以实现一个类级别的`readonlyMembers`，如下所示:
-
-```js
-function readonlyMembers(ctor, heritage, members) {
-  return members.map(member => readonly(member))
-}
-```
-
-### 堆栈装饰器和对不可变的警告
-
-考虑到不可变形，你可能想要基于已有的装饰器返回一个新的装饰器，而不改变原先的装饰器，尽管这是一种好想法，但是可能会返回意料之外的结果，这是由于它可能会装饰同一种类或同一类成员好多次。
-
-如果一段代码中的任何描述符不考虑它们接收的`descriptor`参数二返回一个全新的装饰器，它们实际上在装饰器返回之前丢失了所有的装饰器。
-
-考虑到提供的装饰器，我们应该小心的来写装饰器。永远都只基于原始的以参数提供的`descriptor `创建一个装饰器。
-
-
-### 使用示例：C# 中的 Attributes
-
-我是通过一个Ultima Online（注：这是一个有几十年历史的基于终极宇宙的角色扮演类游戏）在很久以前熟悉的C#语言，这个游戏的服务器使用的是C#代码编写的RunUO。RunUO是我用过的最美待代码库之一了。
-
-他们将服务器软件分发为可执行文件和一系列cs文件。runuo会在运行时编译这些`.cs`文件，并动态的混合他们为程序。结果是你不再需要使用Visual Studio IED了，也不需要任何其它的编辑`.cs`脚本之外的编程知识了。这使得RunOS对于新开发者是非常易学的。
-
-RunOS非常依赖于反映reflection，为了让不熟悉编程的人员但仍然对改变游戏的一些细节感兴趣自定义，它的开发者投入了巨大的精力。比如说，龙的呼吸火焰造成多少伤害，或发射火球的频率。良好的开发体验使他们的主要哲学，你可以通过复制一个怪物文件，改变它来继承龙类，重写一些属性来改变它的颜色，它的伤害输出等等，来创建一种新的龙。
-
-正如他们让创建新怪物或NPC非常容易，他们还依靠反射来为游戏中的管理员提供功能。管理员可以在游戏内运行命令，通过简单的在物品或怪物上点击来可视化或者改变一些属性。
-
-![Modifying properties for a RunUO item in-game from the Ultima Online client](https://ponyfoo.com/books/practical-modern-javascript/img/pmjs_0301.png)
-
-并非一个类中的所有属性在游戏中都可以修改，一些属性只能供内部使用，或者在运行时不可修改。RunUO提供了一个名为`CommandPropertyAttribute`的装饰器，这个装饰器定义了游戏中可以被修改的属性，而且也让你指明了属性的可读写等级。在整个RunUO代码库中，这个装饰器被广泛的使用。
-
-控制用户角色如何工作的类`PlayerMobile`是一个观察这些特性的好地方，`PlayerMobile`拥有一些在游戏中管理者可接触到的属性，这里有一系列的`setter`和`getter`,但是只有第一个拥有`CommandProperty`属性，这使得游戏操作者在游戏中可修改这些属性。
-
-```c#
-[CommandProperty(AccessLevel.GameMaster)]
-public int Profession
-{
-  get{ return m_Profession }
-  set{ m_Profession = value }
-}
-
-public int StepsTaken
-{
-  get{ return m_StepsTaken }
-  set{ m_StepsTaken = value }
-}
-```
-
-C# 的属性和JavaScript的装饰器在一个有趣的不同地方在于，C#中的映射允许我们拖出拥有`getCustomAttributes`的对象的所有自定义属性。RunUO正是使用了这种特性来在拉去每个应该在游戏中可用的属性的信息，这时候会出现一个对话框使得管理者在游戏中查看或修改对象的属性。
-
-### 在JavaScript的标记属性
-
-在JavaScript中并不存在类似的东西，不存在于已有的草案中，至少不能获取属性的自定义特征。这意味着，JavaScript是一个高动态的语言，创建这类的标签并非难事。使用命令行属性装饰`Dog`类并不会和C# 中的 RunUO差别太多。
-
-```js
-class Dog {
-  @commandProperty('game-master')
-  name;
-}
-```
-
-和C#中的实现机制相比，在JavaScript中实现`commandProperty`函数会稍微复杂一点点，考虑到JavaScript中的装饰器没有反映，我们可以使用一个运行时范围的符号来围绕给定类来保持一个命令属性数组。
-
-```js
-function commandProperty(writeLevel, readLevel = writeLevel) {
-  return ({ key, ...rest }) => ({
-    key,
-    ...rest,
-    finisher(ctor) {
-      const symbol = Symbol.for('commandProperties')
-      const commandPropertyDescriptor = {
-        key,
-        readLevel,
-        writeLevel
-      }
-      if (!ctor[symbol]) {
-        ctor[symbol] = []
-      }
-      ctor[symbol].push(commandPropertyDescriptor)
-    }
-  })
-}
-```
-
-`Dog`类因此可以拥有尽可能多的我们认为必要的命令行属性，每一个都将被列在一个符号属性后。为了找到所有给定类的命令属性，我们只需要使用下面这个函数，它从符号属性中接受一组命令属性，并设置其默认值为`[]`，我们同样保存了原始数组的复制数组用以防止用户由于偶然而改变了它。
-
-```js
-function getCommandProperties(ctor) {
-  const symbol = Symbol.for('commandProperties')
-  const properties = ctor[symbol] || []
-  return [...properties]
-}
-getCommandProperties(Dog)
-// <- [{ key: 'name', readLevel: 'game-master',
-// writeLevel: 'game-master' }]
-```
-
-然后，我们可以迭代已知的安全命令属性，并在运行时通过简单的UI呈现修改这些属性的方法，而不是维持可被修改的长列表，也不需要依靠某种试探性的方法来不时地打破，或者使用某种限制性的命名约定。相比这些，装饰器在我们想要对一个属性上标志特殊的属性时是最简洁有效的。
-
-下一章，我们将一起看看ES6提供的关于对象迭代的一些更新，然后我们也将讨论一下如何利用`promises`和`generators`来控制异步。
 
 
 
