--- a/docs/第3章. Classes,Symbols,Objects 和 Decorators.md
+++ b/docs/第3章. Classes,Symbols,Objects 和 Decorators.md
@@ -1,17 +1,22 @@
 # Classs,Symbols,Objects拓展 和 Decorators
 
 
-ES6中新增的类（`classes`) 提供了一种以原型链来模仿传统上基于类编程的模式。而新增的符号`Symbol`则是一种新的基本类型（JS中的第七种基本类型，另外六种为`undefined`、`null`、布尔值（Boolean）、字符串（String）、数值（Number）、对象（Object）），它可以用来定义不可变值。本章中，我们将首先讨论类和符号，之后我们还将对对象的拓展及装饰器进行简单的讲解。
+类（`classes`)可能是ES6提供的，我们使用最广的新功能之一了，它以原型链为基础，为我们提供了一种基于类编程的模式。`Symbol`是一种新的基本类型（JS中的第七种基本类型，另外六种为`undefined`、`null`、布尔值（Boolean）、字符串（String）、数值（Number）、对象（Object）），它可以用来定义不可变值。本章，我们将首先讨论类和符号，之后我们还将对ES6对对象的拓展及处于`stage2`阶段的装饰器进行简单的讲解。
 
 ## 类
 
-我们知道，JavaScript是一种基于原型链的语言，ES6中新增的类和其它面向对象语言中的类有很大的不同，JS中，类实际上是一种基于原型链的语法糖。类可以用以拓展其它类，比如说，我们可以通过简单的语法拓展内置的`Array`，而如果用ES6之前的语法实现，会复杂很多。
+我们知道，JavaScript是一门基于原型链的语言，ES6中的类和其它面向对象语言中的类在本质上有很大的不同，JavaScript中，类实际上是一种基于原型链的语法糖。
 
-### 类的基础
+虽然如此，JavaScript中的类还是给我们的很多操作带来了方便，比如说可以轻易拓展其它类，通过简单的语法我们就可以拓展内置的`Array`了，在下文中我们将详细说明如何使用。
 
-基于已有的知识学习新知识是一种非常好的学习方法，这样我们会对新特性给我们带来的便利性感触更深。基于JS中类实际上是一种基于原型链的语法糖，我们先简单复习基于原型链的JavaScript构造器该怎么使用，然后我们用ES6中类语法实现作为对比。
+### 类基础
 
-下面代码中，我们构建了构造函数`Fruit`用以表示水果的特征。构造函数接收两个参数，水果的名称--`name`，水果的卡路里含量--`calaries`。我们在`Fruit`构造函数中设置了默认的块数 `pieces=1`,该构造函数的 `chop` 方法表示切水果的行为，每次调用会使得块数加一，`bite`方法接收一个名为`person`的参数，它是一个对象，每次调用，该 `person` 将吃掉一块水果，`person` 的饱腹感 `person.satiety ` 将相应的增加，增加值为一块水果的`calaries`值，水果的总的卡路里值 `this.calories`将减少相应的值。
+基于已有的知识学习新知识是一种非常好的学习方法，对比学习可以让我们对新知识有更深的印象。由于JS中类实际上是一种基于原型链的语法糖，我们先简单复习基于原型链的JavaScript构造器要怎么使用，然后我们用ES6中类语法实现相同的功能作为对比。
+
+下面代码中，我们新建了构造函数`Fruit`用以表示某种水果。该构造函数接收两个参数，水果的名称 -- `name`，水果的卡路里含量 -- `calaries`。在`Fruit`构造函数中我们设置了默认的块数 `pieces=1` ,通过原型链，我们还为该构造函数添加了两种方法：
+
+-  `chop` 方法（切水果，每次调用会使得块数加一）；
+-  `bite`方法（接收一个名为`person`的参数，它是一个对象，每次调用，该 `person` 将吃掉一块水果，`person` 的饱腹感 `person.satiety ` 将相应的增加，增加值为一块水果的`calaries`值，水果的总的卡路里值 `this.calories`将减少相应的值）。
 
 ```js
 function Fruit(name, calories) {
@@ -33,7 +38,7 @@ Fruit.prototype.bite = function (person) {
 }
 ```
 
-下面我们如果创建一个`Fruit`构造函数的实例，调用三次`chop`将实例`apple`分为四块，新建`person`对象，传入并调用三次`bite`方法，把`apple`吃掉三块。
+接下来我们创建一个`Fruit`构造函数的实例，调用三次 `chop` 方法将实例 `apple` 分为四块，新建`person`对象，传入并调用三次`bite`方法，把`apple` 吃掉三块。
 
 ```js
 const person = { satiety: 0 }
@@ -52,7 +57,7 @@ console.log(apple.calories)
 // <- 35
 ```
 
-作为对比，下面我们使用类来做和上面一样的事情，在类中，我们显式使用`constructor`方法做为构造方法（其中`this`指向类的实例），在类中定义方法类似在对象字面量中定义方法如`chop`,`bite`。对比基于类和基于原型链的语法，我们会看出，类的所有的方法都声明在`class`的块中，不需要再使用`Fruit.prototype`这类样本代码，与基于原型的语法比起来，类看起来更加清晰易懂。
+作为对比，接下来我们使用类语法来实现上述代码一样的过程。在类中，我们显式使用`constructor`方法做为构造方法（其中`this`指向类的实例），在类中定义方法类似在对象字面量中定义方法，见下述代码中`chop`,`bite`的定义。类所有的方法都声明在`class`的块中，不需要再使用`Fruit.prototype`这类样本代码，从这个角度看与基于原型的语法比起来，类语法语义清晰，使用起来也显得简洁。
 
 ```js
 class Fruit {
@@ -76,11 +81,11 @@ class Fruit {
 }
 ```
 
-在类中定义方法和使用对象字面量类似，但是一个很大的不同在于**方法之间不能使用逗号**，这是类语法的要求。这种语法要求帮我们避免了混用普通的对象和类的错误，类和对象其实是不一样的。这种要求的另外一个好处在于为未来类的改进做下了铺垫，未来JS的类中可能还会添加`public`或`private`等，这和对象差别就更大了。
+虽然在类中定义方法和使用对象字面量类似，但是也有一个较大的不同点，那就是类中 **方法之间不能使用逗号** ，这是类语法的要求。这种要求帮助我们避免混用对象和类，类和对象本来也不一样，这种要求的另外一个好处在于为未来类的改进做下了铺垫，未来JS的类中可能还会添加`public`或`private`等。
 
-实际上，上述我们基于类的代码和基于原型链的代码是一样的。两种`Fruit`都可以吃，都可以切小块。
+和普通函数声明不同的是，类声明并**不会被提升到作用域的顶部**，因此提前调用会报错。
 
-对了，忘了说了，类声明并不会被提升到作用域的顶部，此外像函数声明和函数表达式一样，类也可以被声明为表达式，你可以像下述代码中这样，声明类名：
+类声明有两种方法，一种是像函数声明和函数表达式一样，声明为表达式，如下代码所示：
 
 ```js
 const Person = class {
@@ -90,10 +95,20 @@ const Person = class {
 }
 ```
 
-类还可以作为函数的返回值，这使得创建类工厂非常容易，如下例所示，代码中的箭头函数接收了一个名为`name`的参数，通过`super()`方法把这个参数反馈给其父类`Person`.这样就创建了一个基于`Person`的新类：
+类声明的另外一种语法如下：
 
 ```js
-// 类声明的第二种方法，Name = class{},另外一种方法为class Name {}
+const class Person{
+  constructor(name) {
+    this.name = name
+  }
+}
+```
+
+类还可以作为函数的返回值，这使得创建类工厂非常容易，如下代码中,箭头函数接收了一个名为`name`的参数，`super()`方法把这个参数反馈给其父类`Person`.这样就创建了一个基于`Person`的新类：
+
+```js
+// 这里实际用到的是类的第一种声明方式
 const createPersonClass = name => class extends Person {
   constructor() {
     super(name)
@@ -103,11 +118,12 @@ const JakePerson = createPersonClass('Jake')
 const jake = new JakePerson()
 ```
 
-我们将在稍后详细讨论类继承，在此之前我们先仔细看看属性和方法。
+上面代码中的`extends`关键字表明这里使用到了类继承，稍后我们将详细讨论类继承，在此之前我们先仔细如何在类中定义属性和方法。
 
 ### 类中的属性和方法
 
-类声明中的`constructor`方法是可选的。下面用类声明和用常规构造函数声明的`Fruit`是一样的：
+
+类声明中的`constructor`方法是可选的。如果省略，JS将为我们自动添加，下面用类声明和用常规构造函数声明的`Fruit`是一样的：
 
 ```javascript
 // 用类声明Fruit
@@ -119,7 +135,7 @@ function Fruit() {
 }
 ```
 
-所有传入`Log()`的参数都将作为`Log`中`constructor`的参数，这些参数将用以初始化类的实例：
+所有传入类的参数，都将做为类中`constructor`的参数，如下所有传入`Log()`的参数都将作为`Log`中`constructor`的参数，这些参数将用以初始化类的实例：
 
 ```javascript
 class Log {
@@ -131,7 +147,7 @@ new Log('a', 'b', 'c')
 // <- ['a' 'b' 'c']
 ```
 
-下面的代码中，我们定义了类`Counter`，在`constructor`中定义的代码会在实例化类时自动执行，这里我们在实例化时为实例添加了一个`count`属性，`get next`方法则表示所有类`Counter`实例都将有一个`next`方法，用以返回调用该方法的调用次数+`start`的值：
+下面的代码中，我们定义了类`Counter`，在`constructor`中定义的代码会在实例化类时自动执行，这里我们在实例化时为实例添加了一个`count`属性，`next`属性前面添加了`get`,则表示类`Counter`的所有实例都有一个`next`属性，每次某实例访问`next`属性值时，其值都将+1：
 
 
 ```javascript
@@ -145,7 +161,7 @@ class Counter {
 }
 ```
 
-下面我们新建了`Counter`类的实例`counter`，之后每一次`counter`的`.next`被调用的时候，`count`值增加1，我们需要注意，不应该乱用`get`这里属性访问器。滥用属性访问器的对象一般都会变得让人疑惑。
+我们新建了`Counter`类的实例`counter`，可以发现每一次`counter`的`.next`被调用的时，`count`值增加1。
 
 ```javascript
 const counter = new Counter(2)
@@ -157,10 +173,11 @@ console.log(counter.next)
 //  4
 ```
 
-> get 语法将一个对象属性绑定到查询该属性时将被调用的一个函数上。访问属性时能返回一个动态计算后的值, 或希望不通过使用明确的方法调用而显示内部变量的状态.在JavaScript中, 能通过使用 getter 实现；
-> set 语法绑定一个属性，其后跟着一个函数，当为该函数设置为某个值时，其后的函数将被调用；
+> `getter` 绑定一个属性，其后为一个函数，每次该属性被访问，其后的函数将被执行；
+> 
+> `setter` 语法绑定一个属性，其后跟着一个函数，当为该函数设置为某个值时，其后的函数将被调用；
 
-当结合使用`getter`和`setter`时，我们可以完成一些神奇的事情，如下例中，我们定义了一个类`LocalStorage`，使用提供的存储`key`，可以在读取`data`值时，同时使它在`localStorage`中存储和取出相关数据。
+当结合使用`getter`和`setter`时，我们可以完成一些神奇的事情，下例中，我们定义了类`LocalStorage`，这个类使用提供的存储`key`，在读取`data`值时，实现了同时在`localStorage`中存储和取出相关数据。
 
 ```javascript
 class LocalStorage {
@@ -176,7 +193,9 @@ class LocalStorage {
 }
 ```
 
-我们看看如何使用`LocalStorage`类。首先我们新建`LocalStorage`的实例`ls`,传入该实例的`key`为`groceries`,当我们设置`ls.data`为某个值时，该值将被转换为JSON对象字符串，并存储在`localStorage`中，当需要读取时，我们将使用相应的`key`，提取出之前存储在`localStorage`中的内容，以JSON的格式进行解析后返回：
+我们看看如何使用类`LocalStorage`：
+
+新建`LocalStorage`的实例`ls`,传入`ls`的`key`为`groceries`,当我们设置`ls.data`为某个值时，该值将被转换为JSON对象字符串，并存储在`localStorage`中;当使用相应的`key`进行读取时，将提取出之前存储在`localStorage`中的内容，以JSON的格式进行解析后返回：
 
 ```javascript
 const ls = new LocalStorage('groceries')
@@ -185,7 +204,7 @@ console.log(ls.data)
 // <- ['apples', 'bananas', 'grapes']
 ```
 
-除了使用`getters`和`setters`,我们也可以定义常规的实例方法，前面我们已经定义过`Fruit`类。下面我们再定义了一个可以吃水果的`Person`类，接下来我们实例化一个`fruit`和一个`person`，然后让 `person` 吃 `fruit` 。之后我们让`person`吃完了所有的`fruit`，随之`person`的`satiety`(饱食度)上升到了40。
+除了使用`getters`和`setters`,我们也可以定义常规的实例方法，继续之前定义过的`Fruit`类，我们再定义了一个可以吃水果的`Person`类，我们实例化一个`fruit`和一个`person`，然后让 `person` 吃 `fruit` 。这里我们让`person`吃完了所有的`fruit`，结果是`person`的`satiety`(饱食度)上升到了40。
 
 ```javascript
 class Person {
@@ -205,7 +224,7 @@ console.log(person.satiety)
 // <- 40
 ```
 
-有时候我们可能会希望静态方法直接定义在类上，使用的是ES6之前的语法，我们需要将该方法直接添加于构造函数上，如下面的`Person.isPerson`:
+有时候我们可能会希望静态方法直接定义在类上，如果使用ES6之前的语法，我们需要将该方法直接添加于构造函数上，如下面的`Person.isPerson`:
 
 ```javascript
 function Person() {
@@ -219,9 +238,9 @@ Person.isPerson = function (person) {
 }
 ```
 
-类语法则允许你，通过添加前缀`static`来定义静态方法`Persion.isPerson`，
+类语法则允许通过添加前缀`static`来定义静态方法`Persion.isPerson`，
 
-下属代码我们给类`MathHelper`中定义了一个静态方法`sum`，这个方法将用以计算实例化时所有传入参数的总和。
+下属代码我们给类`MathHelper`定义了一个静态方法`sum`，这个方法将用以计算实例化时所有传入参数的总和。
 
 ```javascript
 class MathHelper {
@@ -233,11 +252,10 @@ console.log(MathHelper.sum(1, 2, 3, 4, 5))
 // <- 15
 ```
 
-不过具体怎么用都取决于你的偏好，JavaScript就是这么一门非常灵活的语言，你怎么用都行。
 
 ### 类的继承
 
-ES6之前，你可以使用原型链来模拟类的继承，如下代码所示，我们新建了的构造函数`Banana`，用以拓展上文中定义的`Fruit`类，为了`Banana`能够正确初始化,我们需要在`Banana`中调用，`Fruit.call(this, 'banana', 105)`,我们还需要显式的设置`Banana`的`prototype`。
+ES6之前，你可以使用原型链来模拟类的继承，如下代码所示，我们新建了的构造函数`Banana`，用以拓展上文中定义的`Fruit`类，为了`Banana`能够正确初始化,我们需要在`Banana`中调用`Fruit.call(this, 'banana', 105)`,此外还需要显式的设置`Banana`的`prototype`。
 
 ```javascript
 function Banana() {
@@ -249,8 +267,7 @@ Banana.prototype.slice = function () {
 }
 ```
 
-
-鉴于上述代码的复杂性，一般JS开发者都使用库来解决继承问题。比如说Node.js就提供了`util.inherits`。
+上述代码一点也称不上简洁，一般JS开发者会使用库来解决继承问题。比如说Node.js就提供了`util.inherits`。
 
 
 ```javascript
@@ -265,7 +282,7 @@ Banana.prototype.slice = function () {
 ```
 
 
-除了banana有确定的`name`和`calories`,以及额外的`slice`方法（用来把banana切为12块）外，`Banana`构造函数和`Fruit`构造函数其实没有区别。下面的代码表现了我们执行`bite`时`Banana`的行为：
+考虑到，banana除了有确定的`name`和`calories`,以及额外的`slice`方法（用来把banana切为12块）外，`Banana`构造函数和`Fruit`构造函数其实没有区别，我们可以在`Banana`中也执行`bite`：
 
 ```javascript
 const person = { satiety: 0 }
@@ -280,7 +297,7 @@ console.log(banana.calories)
 // <- 96.25
 ```
 
-下面我们用ES6的语法来实现上面的功能，这里我们创建了一个名为`Banana`的类用以继承`Fruit`类。可以看出，这种语法非常清晰，我们无须彻底弄明白原型的机制就可以获得我们想要的结果。我们想要给`Fruit`类传递参数，只需要使用`super`关键字即可。`super`关键字还可以用以调用存在于父类中的方法，比如说`super.chop`,其使用不限于在`constructor`里面。
+下面我们看看ES6为继承提供的解决方案，下述代码中，这里我们创建了一个继承自`Fruit`类的名为`Banana`的类。可以看出，这种语法非常清晰，我们无须彻底弄明白原型的机制就可以获得我们想要的结果，如果想给`Fruit`类传递参数，只需要使用`super`关键字即可。`super`关键字还可以用以调用存在于父类中的方法，比如说`super.chop`,`super``constructor`外面的方法中也可以使用：
 
 ```javascript
 class Banana extends Fruit {
@@ -293,9 +310,7 @@ class Banana extends Fruit {
 }
 ```
 
-尽管`class`关键字是静态的，结合JavaScript的函数灵活性。所有返回构造函数的表达式都可以用于拓展，我们因此可以创建一个构造函数工厂，并它当做基类。
-
-下面的代码中定义了一个`createJuicyFruit` 的函数，通过使用`super`我们可以给`Fruit`类传入`name`和`calories`,这样可以轻易的拓展`createJuicyFruit`类了。
+基于JS函数的返回值可以是任何表达式，下面我们构建一个构造函数工厂，下面的代码定义了一个名为 `createJuicyFruit` 的函数，通过使用`super`我们可以给`Fruit`类传入`name`和`calories`,这样就轻松的实现了对`createJuicyFruit`类的拓展。
 
 ```javascript
 const createJuicyFruit = (...params) =>
@@ -312,6 +327,7 @@ const createJuicyFruit = (...params) =>
       this.juice += 3
     }
   }
+  
 class Plum extends createJuicyFruit('plum', 30) {
 }
 ```
@@ -320,14 +336,14 @@ class Plum extends createJuicyFruit('plum', 30) {
 
 ## Symbols
 
-Symbol是ES6提供的一种新的JS基本类型。 它代表唯一值，和字符串，数值等基本类型一个很大的不同点在于Symbol没有字符的表达形式。Symbol的主要目的是用以实现协议，比如说，使用Symbol定义的迭代协议规定了对象将如何被迭代，关于这个，我们将在[Iterator Protocol and Iterable Protocol.]()这一章详细阐述。
+Symbol是ES6提供的一种新的JS基本类型。 它代表唯一值，和字符串，数值等基本类型的一个很大的不同点在于Symbol没有字符表达形式。Symbol的主要目的是用以实现协议，比如说，使用Symbol定义的迭代协议规定了对象将如何被迭代，关于这个，我们将在[Iterator Protocol and Iterable Protocol.]()这一章详细阐述。
 
-Symbol有三种不同类型，其各有不同的使用方法，三种类型如下：
+ES6提供的Symbol有如下三种不同类型：
 - `local Symbol`；
 - `global Symbol`；
 - 语言内置`Symbol`；
 
-我们一种种来看它们是什么意思，又该如何使用，首先看`local Symbol`。
+这三种类型的Symbol存在着一定的不同，我们一种种来讲解，首先看`local Symbol`。
 
 ### Local Symbol
 
@@ -337,7 +353,7 @@ Local Symbol 通过 `Symbol` 包装对象创建，如下：
 const first = Symbol()
 ```
 
-这里有一点特别值得我们注意，在`Number`或`String`等包装对象前是可以使用`new`操作符的，在`Symbol`前则不能使用，使用了会抛出错误，如下所示：
+这里有一点特别值得我们注意，在`Number`或`String`等包装对象前是可以使用`new`操作符的，在`Symbol`前则不能使用，使用了会抛出错误，如下：
 
 ```js
 const oops = new Symbol()
@@ -361,7 +377,7 @@ console.log(Symbol('my symbol') === Symbol('my symbol'))
 // <- false
 ```
 
-Symbols的类别为`symbol`，使用 `typeof` 可得到其类型返回的值：
+Symbols的类别为`symbol`，使用 `typeof` 可返回其类型：
 
 ```js
 console.log(typeof Symbol())
@@ -370,7 +386,7 @@ console.log(typeof Symbol('my symbol'))
 // <- 'symbol'
 ```
 
-Symbols 可以用作对象的属性名，这里我们用计算属性名来说明该如何使用，如下：
+Symbols 可以用作对象的属性名，这里我们用**计算属性名**来说明该如何使用，如下：
 
 ```js
 const weapon = Symbol('weapon')
@@ -402,7 +418,7 @@ console.log(JSON.stringify(character))
 // <- '{"name":"Penguin"}'
 ```
 
-不过，Symbols绝不是一种用来隐藏属性的安全机制。由特定的方法，它是可见的，如下所示：
+不过，Symbols绝不是一种用来隐藏属性的安全机制。采用特定的方法，它是可见的，如下所示：
 
 ```js
 console.log(Object.getOwnPropertySymbols(character))
@@ -415,8 +431,7 @@ console.log(Object.getOwnPropertySymbols(character))
 
 ### Symbols的使用实例
 
-
-使用Symbol则完全没有这类问题了，你不用担心定义的属性名会和将来语言中的属性名冲突，它们是唯一的，我们可以按下面这样使用：
+Symbol最重要的用途就是用以避免命名冲突了，如下代码中，我们给DOM元素添加了自定义的属性，使用Symbol不用担心属性与其它属性甚至之后JS语言会加入的属性相冲突：
 
 ```js
 const cache = Symbol('calendar')
@@ -431,13 +446,13 @@ function createCalendar(el) {
 }
 ```
 
-ES6 提供的一种名为`WeakMap`的新数据类型,它用于唯一地将对象映射到其他对象。和数组查找表比起来，`WeakMap`查找复杂度始终为O(1),我们将在 [Leveraging ECMAScript Collections]() 一章和其它ES6新增数据类型一起讨论。
+ES6 还提供的一种名为`WeakMap`的新数据类型,它用于唯一地将对象映射到其他对象。和数组查找表比起来，`WeakMap`查找复杂度始终为O(1),我们将在 [Leveraging ECMAScript Collections]() 一章和其它ES6新增数据类型一起讨论这个。
 
 ### 使用符号定义协议
 
-前文中，我们说过 `Symbol` 可以用以定义协议。协议是定义行为的通信契约或约定。简单说来，库可用使用Symbol ,然后依附于该库的对象就可以使用Symbol了。
+前文中，我们说过 `Symbol` 可以用以定义协议。协议是定义行为的通信契约或约定。
 
-下述代码中，我们给`character`对象添加了一个`toJSON`方法，用以指定对该对象使用`JSON.stringify`时被序列化的对象。
+下述代码中，我们给`character`对象有一个`toJSON`方法，这个方法，指定了对该对象使用`JSON.stringify`时被序列化的对象。
 
 ```js
 const character = {
@@ -450,7 +465,7 @@ console.log(JSON.stringify(character))
 // <- '"{"key":"value"}"'
 ```
 
-如果`toJSON`不是函数，执行`JSON.stringify`时`character`对象整体将被序列化。
+如果`toJSON`不是函数，对`character`对象执行`JSON.stringify`则会有不同的结果，`character`对象整体将被序列化。有时候这不是我们想要的结果：
 
 ```js
 const character = {
@@ -461,7 +476,7 @@ console.log(JSON.stringify(character))
 // <- '"{"name":"Thor","toJSON":true}"'
 ```
 
-如果`toJSON`修饰符是Symbol类型，它就不会影响其它的对象属性了，Symbol本身不调用`Object.getOwnPropertySymbols`永远不会暴露出来的，以下代码中我们用`Symbol`自定义了自定义函数`stringify`：
+如果`toJSON`修饰符是Symbol类型，它就不会影响其它的对象属性了，不通过`Object.getOwnPropertySymbols`Symbol永远不会暴露出来的，以下代码中我们用`Symbol`自定义序列化函数`stringify`：
 
 ```js
 const json = Symbol('alternative to toJSON')
@@ -488,13 +503,17 @@ stringify(character)
 
 代码域指的是任何JavaScript表达式的执行上下文，它可以是你的应用当前运行的页面、页面中的`<iframe>`、由`eval`运行的脚本、任意类型的`worker`（`web worker`,`service workers`或者`shared workers`）等等。这些执行上下文每一种都有其全局对象，比如说页面的全局对象`window`，但是这种全局对象不能被其它代码域比如说`ServiceWorker`使用。相比而言，全局符号则更具全局性，它可以被任何代码域访问。
 
-有两种方法可以和全局符号有所交互，`Symbol.for`和`Symbol.keyFor`。我们看看它们分别该如何使用？
+ES6提供了两个和全局符号相关的方法，`Symbol.for`和`Symbol.keyFor`。我们看看它们分别该如何使用？
 
 #### 通过`Symbol.for(key)`获取symbols
 
-`Symbol.for(key)`方法将在运行时的符号注册表中查找`key`,如果全局注册表中存在`key`则返回其对于的`Symbol`，如果不存在该`key`对于的Symbol，该方法会在全局注册表中创建`key`值为所查找`key`值的Symbol。这意味着，`Symbol.for(key)`是幂等的（多次执行，结果唯一），先进行查找，不存在则新创建，然后返回查找到的或新创建的Symbol。
+`Symbol.for(key)`方法将在运行时的符号注册表中查找`key`,如果全局注册表中存在`key`则返回其对于的`Symbol`，如果不存在该`key`对于的Symbol，该方法会在全局注册表中创建一个新的`key`值为该`key`值的Symbol。这意味着，`Symbol.for(key)`是幂等的（多次执行，结果唯一），先进行查找，不存在则新创建，然后返回查找到的或新创建的Symbol。
 
-我们看看使用示例，下面的代码中，第一次调用`Symbol.for`创建了一个key为`example`的Symbol，添加到到注册表，并返回了该Symbol，第二次调用`Symbol.for`由于该`key`已经在注册表中存在，因此返回了之前创建的全局符号。
+我们看看使用示例，下面的代码中，
+
+- 第一次调用`Symbol.for`创建了一个key为`example`的Symbol，添加到到注册表，并返回了该Symbol；
+
+- 第二次调用`Symbol.for`由于该`key`已经在注册表中存在，因此返回了之前创建的全局符号。
 
 ```js
 const example = Symbol.for('example')
@@ -546,13 +565,13 @@ console.log(s1 === s2)
 // <- true
 ```
 
-在使用全局符号就像我们使用全局变量一样，合理使用会非常方便，但是不合理使用又会造成灾难。全局符号在符号需要夸代码域使用时非常有用，比如说跨`ServiceWorker`和浏览器页面，但是滥用会导致Symbol难易管理，容易冲突。
+使用全局符号就像我们使用全局变量一样，合理使用在某些时候非常便利，但是不合理使用又会造成灾难。全局符号在符号需要跨代码域使用时非常有用，比如说跨`ServiceWorker`和浏览器页面，但是滥用会导致Symbol难易管理，容易冲突。
 
 下面我们来看，最后一种Symbol，内置的常用Symbol。
 
 ### 内置的常用Symbol
 
-内置的常用Symbol为JS语言行为添加了钩子，在一定程度上允许你拓展和自定义ES6语言。
+内置的常用Symbol为JS语言行为添加了钩子，在一定程度上允许你拓展和自定义JS语言。
 
 `Symbol.toPrimitive`符号，是描述如何通过 Symbols 给语言添加额外的功能的最好的例子，这个Symbol的作用是，依据给定的类型返回默认值。该函数接收一个`hint`参数，参数可以是`string`,`number`或`default`，用以指明默认值的期待类型。
 
@@ -614,15 +633,15 @@ console.log(Symbol.keyFor(Symbol.iterator))
 
 ## 内置对象的改进
 
-我们在[ES6 Essentials]()一章，已经讲述过对象字面量语法的改进，这里我们再补充一下内置对象新增的方法。
+我们在[ES6 概要](https://github.com/zhangwang1990/PracticeModernJavaScript/blob/master/docs/%E7%AC%AC2%E7%AB%A0.%20ES6%20%E6%A6%82%E8%A6%81.md)一章，已经讲述过ES6中对象字面量语法的改进，这里我们再补充一下内置对象新增的方法。
 
 除了前面讨论过的`Object.getOwnPropertySymbols`，新增的对象方法还有`Object.assign`,`Object.is`以及`Object.setPrototypeOf`。
 
 ### 使用`Object.assign`来拓展对象
 
-现在的前端开发者肯定特别肯定非常数据给中库的使用，一些库在允许我们自定义某些行为的同时也给我们常用的方法属性指定了默认值。
+我们在实际开发中常常使用各种库，一些库在允许我们自定义某些行为，不过为了使用方便这些库通常也给出了默认值，而我们的自定义常常就是在默认值的基础上进行的。
 
-假如说现在有这么一个Markdown库。其接收一个 `input` 参数，依据`input`代表的Markdown内容，转换其为 Html 是默认的用法，用户不需要提供其它参数就可以简单实用这个库。不过，该库还支持多个不同的配置，比如说通过配置可以添加`<script>`或`<iframe>`，也可以启用 css 来高亮渲染代码片段。
+假如说现在有这么一个Markdown库。其接收一个 `input` 参数，依据`input`代表的Markdown内容，转换其为 Html 是其默认的用法，用户不需要提供其它参数就可以简单使用这个库。不过，该库还支持多个高级的配置，只是默认是关闭的，比如说通过配置可以添加`<script>`或`<iframe>`，可以启用 css 来高亮渲染代码片段。
 
 比如说，该库的默认选项如下：
 
@@ -634,14 +653,14 @@ const defaults = {
 }
 ```
 
-我们可以使用解构将`defaults`对象设置为`options`的默认值，在本例中，如果用户想要自定义，用户必须提供每个选项的值。
+我们可以使用解构将`defaults`对象设置为`options`的默认值，在以前，如果用户想要自定义，用户必须提供每个选项的值。
 
 ```js
 function md(input, options=defaults) {
 }
 ```
 
-`Object.assign` 在这时就可以用来非常方便的合并默认值和用户提供的值，如下代码所示，我们传入`{}`作为`Object.assign`的第一个参数，这个参数在之后将不断依据后面的参数修改，并在最后返回。具体过程如下，我们首先复制defaults到{}中，然后再复制options到前面的结果中，覆盖重复值，最终的结果`config` 对象就会是一个包含默认值和用户自定义值的对象了。
+`Object.assign` 就是为这种场景而生，这个方法可以非常方便的合并默认值和用户提供的值，如下代码所示，我们传入`{}`作为`Object.assign`的第一个参数，之后这个参数将不断与后面的参数对比合并，后面参数中的重复值将覆盖前面以后的值，待所有的比较合并完成，我们将获得最终的值。
 
 ```js
 function md(input, options) {
@@ -649,12 +668,11 @@ function md(input, options) {
 }
 ```
 
+> #### 理解`Object.assign`第一个参数的特殊意义
 
-> ####理解`Object.assign`
+> `Object.assign`的返回值是依据第一个参数而来的，第一个参数最终会修改为返回值，参数可看做`(target, ...sources)`,所有的 sources 都会被应用到`target`中。
 
-> `Object.assign`函数将改变它的第一个参数，它的参数可以归纳为`(target, ...sources)`,所有的 sources 都会被应用到`target`上。
-
-> 如果这里我们的第一个参数不是一个空对象，而是`defaults`，那么`Object.assign()`执行结束之后，`defaults`对象的值也将被改变，虽然这里我们会得到和前面那个例子中一样的结果，但是`default`值被改变，可能也会导致一些意想不到的问题。
+> 如果这里我们的第一个参数不是一个空对象，而是`defaults`，那么`Object.assign()`执行结束之后，`defaults`对象的值也将被改变，虽然这里我们会得到和前面那个例子中一样的结果，但是由于`default`值被改变，在别的地方可能也会导致一些意想不到的问题。
 
 >
 ```js
@@ -665,7 +683,7 @@ function md(input, options) {
 
 > 因此，最好把`Object.assign`的第一个参数始终设置为`{}`。
 
-我们使用如下代码加深你对`Object.assign`的理解：
+下面的代码加深你对`Object.assign`的理解：
 
 ```js
 const defaults = {
@@ -816,11 +834,9 @@ const cat = Object.setPrototypeOf(
 
 ### 装饰器(Decorators)
 
-对于大多数编程语言而言，装饰器不是一个新概念。在现代编程语言中，装饰器模式相当常见，c# 中 有`attributes`,Java中有`annotations`，Python中有`decorators`等等。JavaScript的装饰器提案也正在进行中，目前其处于Stage2。
+对于大多数编程语言而言，装饰器不是一个新概念。在现代编程语言中，装饰器模式相当常见，c# 中 有`attributes`,Java中有`annotations`，Python中有`decorators`等等。目前也存在一个处于Stage2 的JavaScript的装饰器提案。
 
-
-JavaScript中的装饰器语法和Python的非常类似。JavaScript的装饰器可以应用于任何对象或者静态声明的属性。诸如对象字面量声明或`class`声明，甚至它们在`get`,`set`,`static`前。
-
+JavaScript中的装饰器语法和Python的非常类似。JavaScript的装饰器可以应用于任何对象或者静态声明的属性前。诸如对象字面量声明或`class`声明前，或`get`,`set`,`static`前。
 
 ```js
 @inanimate
@@ -836,13 +852,13 @@ class View {
 }
 ```
 
-关于装饰器凹凸实验室的一篇文章解释的比较清楚，大家可以参考[Javascript 中的装饰器](https://aotu.io/notes/2016/10/24/decorator/index.html)
+关于装饰器凹凸实验室的一篇文章解释的比较清楚，大家可以参考[Javascript 中的装饰器](https://aotu.io/notes/2016/10/24/decorator/index.html)。
 
-
-> 当装饰器作用于类本身的时候，我们操作的对象也是这个类本身，而当装饰器作用于类的某个具体的属性的时候，我们操作的对象既不是类本身，也不是类的属性，而是它的描述符（descriptor），而描述符里记录着我们对这个属性的全部信息，所以，我们可以对它自由的进行扩展和封装，最后达到的目的呢，就和之前说过的装饰器的作用是一样的。
+> 当装饰器作用于类本身的时候，我们操作的对象也是这个类本身，而当装饰器作用于类的某个具体的属性的时候，我们操作的对象既不是类本身，也不是类的属性，而是它的描述符（descriptor），而描述符里记录着我们对这个属性的全部信息，所以，我们可以对它自由的进行扩展和封装，最后达到的目的呢，就和之前说过的装饰器的作用是一样的。可以看如下两段代码加深理解
 > 
 
-**作用于类时**
+> **作用于类时**
+
 ```js
 
 function isAnimal(target) {
@@ -861,7 +877,7 @@ Cat = isAnimal(function Cat() { ... });
 
 ```
 
-**作用于类属性时**
+>**作用于类属性时**
 
 ```js
 function readonly(target, name, descriptor) {
@@ -894,8 +910,9 @@ Object.defineProperty(Cat.prototype, "say", descriptor);
 ```
 
 
+## 有用的链接
 
-
+- [原文链接](https://github.com/mjavascript/practical-modern-javascript/blob/master/ch03.asciidoc)
 
 
 
