迭代器--无限序列

--- a/docs/第4章. 迭代和流程控制.md
+++ b/docs/第4章. 迭代和流程控制.md
@@ -668,8 +668,102 @@ for (const element of $('li')) {
 
 ### 无限序列
 
-迭代器天生是懒惰的。迭代序列中的元素，一次只会生成一个。
+迭代器天生是懒惰的。迭代序列中的元素即使是有限的，一次只会生成一个。注意，无限序列不能没有惰性属性来表达。一个无限序列不能被表现为一个数组。这意味着如果使用拓展运算符或者`Array.from`转换一个无限队列为数组将导致JS报错，因为这将导致我们进入一个无限循环。
 
+下面代码表现出了一个由0到1之间的浮点数组成的无限序列迭代器，观看代码我们可以发现，由`next`返回的项目甚至没有一个值为`true`的`done`属性（表征序列结束）。它使用两个箭头函数隐式返回对象。第一个箭头函数用以返回用于迭代无限数字序列的迭代器对象。第二个箭头函数获取迭代器对象中的每一个单一由`Math.random`生成的数值。
+
+```js
+const random = {
+  [Symbol.iterator]: () => ({
+    next: () => ({ value: Math.random() })
+  })
+}
+```
+
+由于上述序列是无限的，尝试使用`Array.from(random)`或`[...random]`转换上述`array`对象为数组将会使我们的程序崩溃。当我们处理这类序列的时候，我们必须额外小心，因为它真的很容易就让我们的浏览器或者`Node`进程崩溃了。
+
+存在一些方法让你可以安全的使用序列，而不用担心启用了无限循环。第一种方法是使用解构来获取序列中的特定值，方法如下所示：
+
+```js
+const [one, another] = random
+console.log(one)
+// <- 0.23235511826351285
+console.log(another)
+// <- 0.28749457537196577
+```
+
+解构无限序列在有的时候又不是那么适用，尤其是当我们希望添加动态条件时，比如说，获取第一个`i`对应的值，或者获取某个满足我们条件的值。在这种情况下，我们最好使用`for..of`。这样我们可以用编程的方式在防止无限循环的前提下尽可能多的迭代元素，下述代码使用`for...of`迭代了我们前面生成的无限序列，但是只要有一个序列值大于`0.8`,迭代将停止。考虑到`Math.random()`返回的值处于0到1之间，这个循环终会结束。
+
+```js
+for (const value of random) {
+  if (value > 0.8) {
+    break
+  }
+  console.log(value)
+}
+```
+
+稍后再读上述代码可能会造成理解困难，这是因为上述代码大多集中于当前序列是如何被迭代的。在满足条件之前打印出所有的随机数值，抽象上述逻辑到另一个方法可能会让代码的可读写更高。
+
+我们换个例子，另外一个常见的场景是从一个无限序列或者非常大的序列中抽离出最开始的少量几个元素。尽管你可以直接使用`for...of`和`break`语句。更好的方式是抽离这段代码到一二`take`方法中。下述代码是`take`方法的一种可能实现，它接收两个参数，分别是`sequence`代表待迭代的序列及`amount`需要提取出的值。它将返回一个可被迭代对象，无论何时对象被迭代时，它将依旧所传入的`sequence`返回一个迭代对象。`next`方法和上面的有些许不同，它要求数目至少为1，否者就结束当前序列。
+
+```js
+// to rethink
+function take(sequence, amount) {
+  return {
+    [Symbol.iterator]() {
+      const iterator = sequence[Symbol.iterator]()
+      return {
+        next() {
+          if (amount-- < 1) {
+            return { done: true }
+          }
+          return iterator.next()
+        }
+      }
+    }
+  }
+}
+```
+
+对于无线序列，我们的代码具有较好的实践，因为上述方法提供了一个退出条件，一旦`amount`数目达到，序列将被终结。现在除了使用循环来获取`random`的值，你可以像下面这样来获取值了：
+
+```js
+[...take(random, 2)]
+// <- [0.304253100650385, 0.5851333604659885]
+```
+
+上述方法允许你转换任何无线序列为有限的。如果你的需求不再是获取前N个序列值，而是获取所有小于第一个0.8的值。你可以修改`take`来满足你的条件，下面我们定义了一个`range`函数，它有默认`low`值为0，`high`参数值为`1`的参数，一旦序列中有值超出这个范围，我们将停止从中获取值。
+
+```js
+function range(sequence, low = 0, high = 1) {
+  return {
+    [Symbol.iterator]() {
+      const iterator = sequence[Symbol.iterator]()
+      return {
+        next() {
+          const item = iterator.next()
+          if (item.value < low || item.value > high) {
+            return { done: true }
+          }
+          return item
+        }
+      }
+    }
+  }
+}
+```
+
+现在我们不必因为担心序列永不结束而打断`for...of`，我们可以确信迭代终会因为获取到了超出范围外的值而停止。通过这种方法，你写代码的时候不用再那么担心序列是如何生成的，而能更专注于序列能做什么。如下代码所示，你甚至不需要一个`for...of`循环，因为打破条件现在包含在`range`函数中。
+
+```js
+const low = [...range(random, 0, 0.8)]
+// <- [0.68912092433311, 0.059788614744320, 0.09396195202134]
+```
+
+这种抽象复杂代码到其它函数中的方法常常能让我们专注于代码的本来目的，我们避免了使用`for...of`循环并获取到我们想要的序列，还展示了序列可以如何连接组成管道。在这种情况下，我们首先创建了一个多用途的无限`random`序列，然后再通过一系列函数，返回一个推导序列结束时，它会值低于或高于要求的，范围迭代器的一个重要方面是，尽管已经组合了，但范围函数生成的迭代器也可以缓慢迭代，这实际上意味着您可以在映射、过滤和退出条件帮助器中编写多个迭代器。
+
+除了创建迭代器对象技术的影响，我们现在讨论几个实际的例子对我们可以如何从迭代器中受益。
 
 
 
